added more transalation

--- a/src/locales/bn/common.json
+++ b/src/locales/bn/common.json
@@ -16,7 +16,14 @@
     "close": "বন্ধ করুন",
     "back": "পিছনে",
     "next": "পরবর্তী",
-    "done": "সম্পন্ন"
+    "done": "সম্পন্ন",
+    "skip": "এড়িয়ে যান",
+    "getStarted": "শুরু করুন",
+    "languageChanged": "ভাষা সফলভাবে পরিবর্তিত হয়েছে!",
+    "languageChangeError": "ভাষা পরিবর্তন করতে ব্যর্থ",
+    "loggedOut": "সফলভাবে লগ আউট হয়েছে!",
+    "editComingSoon": "সম্পাদনা শীঘ্রই আসছে!",
+    "notSet": "সেট করা হয়নি"
   },
   "home": {
     "greeting": "নমস্কার, {{name}}!",
@@ -24,10 +31,18 @@
     "quickActions": "দ্রুত কাজ",
     "healthTips": "আজকের স্বাস্থ্য টিপস",
     "aiAssistant": "AI সহায়কের সাথে কথা বলুন",
-    "aiAssistantDesc": "ওষুধ, লক্ষণ বা স্বাস্থ্য পরামর্শ সম্পর্কে আপনার ভাষায় জিজ্ঞাসা করুন"
+    "aiAssistantDesc": "ওষুধ, লক্ষণ বা স্বাস্থ্য পরামর্শ সম্পর্কে আপনার ভাষায় জিজ্ঞাসা করুন",
+    "healthTip1": "প্রতিদিন 8 গ্লাস পানি পান করুন",
+    "healthTip2": "যদি না নির্দিষ্ট করা থাকে তবে খাবারের পর ওষুধ নিন",
+    "healthTip3": "প্রতিদিন 30 মিনিট ব্যায়াম করুন",
+    "healthTip4": "7-8 ঘন্টা ঘুমান",
+    "symptomChecker": "লক্ষণ পরীক্ষক",
+    "myMedicines": "আমার ওষুধ",
+    "trackHealth": "স্বাস্থ্য ট্র্যাক করুন"
   },
   "medicine": {
     "details": "ওষুধের বিবরণ",
+    "detailedInfo": "এই ওষুধ সম্পর্কে বিস্তারিত তথ্য",
     "name": "নাম",
     "genericName": "জেনেরিক নাম",
     "category": "বিভাগ",
@@ -45,13 +60,152 @@
   },
   "profile": {
     "title": "প্রোফাইল",
+    "managePreferences": "আপনার পছন্দসমূহ পরিচালনা করুন",
+    "personalInfo": "ব্যক্তিগত তথ্য",
+    "name": "নাম",
+    "email": "ইমেইল",
+    "phoneNumber": "ফোন নম্বর",
     "preferences": "পছন্দসমূহ",
     "notifications": "বিজ্ঞপ্তি",
     "medicationReminders": "ওষুধের অনুস্মারক",
+    "getNotified": "আপনার মাত্রার জন্য বিজ্ঞপ্তি পান",
     "healthTips": "স্বাস্থ্য টিপস",
+    "dailyAdvice": "দৈনন্দিন সুস্থতা পরামর্শ",
     "language": "ভাষা",
     "changeLanguage": "ভাষা পরিবর্তন করুন",
-    "supports": "সমর্থিত: হিন্দি, তামিল, তেলেগু, বাংলা, মারাঠি, গুজরাটি, কন্নড়"
+    "supports": "সমর্থিত: হিন্দি, তামিল, তেলেগু, বাংলা, মারাঠি, গুজরাটি, কন্নড়",
+    "accessibility": "প্রবেশযোগ্যতা সেটিংস",
+    "darkMode": "ডার্ক মোড",
+    "easierOnEyes": "চোখের জন্য সহজ",
+    "largeText": "বড় পাঠ্য",
+    "increaseFontSize": "ফন্টের আকার বাড়ান",
+    "highContrast": "উচ্চ কনট্রাস্ট",
+    "betterVisibility": "ভাল দৃশ্যমানতা",
+    "logOut": "লগ আউট"
+  },
+  "symptoms": {
+    "title": "লক্ষণ পরীক্ষক",
+    "subtitle": "ওষুধের পরামর্শ পেতে আপনার লক্ষণগুলি নির্বাচন করুন",
+    "selectedSymptoms": "নির্বাচিত লক্ষণ",
+    "clearAll": "সব মুছুন",
+    "commonSymptoms": "সাধারণ লক্ষণ",
+    "checkSymptoms": "লক্ষণ পরীক্ষা করুন",
+    "selectAtLeastOne": "অনুগ্রহ করে অন্তত একটি লক্ষণ নির্বাচন করুন",
+    "disclaimer": "এটি শুধুমাত্র তথ্যের জন্য। সঠিক নির্ণয়ের জন্য ডাক্তারের সাথে পরামর্শ করুন।",
+    "suggestedMedicines": "প্রস্তাবিত ওষুধ",
+    "checkDifferentSymptoms": "বিভিন্ন লক্ষণ পরীক্ষা করুন",
+    "headache": "মাথাব্যথা",
+    "fever": "জ্বর",
+    "cough": "কাশি",
+    "cold": "ঠান্ডা",
+    "bodyPain": "শরীরে ব্যথা",
+    "nausea": "বমি বমি ভাব",
+    "dizziness": "মাথা ঘোরা",
+    "fatigue": "ক্লান্তি",
+    "soreThroat": "গলা ব্যথা",
+    "chestPain": "বুক ব্যথা"
+  },
+  "reminders": {
+    "title": "ওষুধের অনুস্মারক",
+    "subtitle": "আপনার মাত্রা কখনো ভুলবেন না",
+    "addNewReminder": "নতুন অনুস্মারক যোগ করুন",
+    "todaysReminders": "আজকের অনুস্মারক",
+    "noActiveReminders": "কোন সক্রিয় অনুস্মারক নেই",
+    "completedToday": "আজ সম্পন্ন হয়েছে",
+    "reminderUpdated": "অনুস্মারক আপডেট হয়েছে",
+    "reminderDeleted": "অনুস্মারক মুছে ফেলা হয়েছে",
+    "addReminderComingSoon": "অনুস্মারক বৈশিষ্ট্য শীঘ্রই আসছে!",
+    "daily": "দৈনিক",
+    "weekly": "সাপ্তাহিক",
+    "monthly": "মাসিক"
+  },
+  "onboarding": {
+    "slide1Title": "AI সহায়কের সাথে কথা বলুন",
+    "slide1Desc": "আপনার ভাষায় স্বাভাবিকভাবে কথা বলুন। AI-চালিত ওষুধ, লক্ষণ এবং স্বাস্থ্য পরামর্শ সম্পর্কে তাৎক্ষণিক উত্তর পান",
+    "slide2Title": "আপনার ওষুধ খুঁজুন",
+    "slide2Desc": "নাম দিয়ে ওষুধ খুঁজুন, প্রেসক্রিপশন স্ক্যান করুন বা আপনার পছন্দের ভাষায় ভয়েস ইনপুট ব্যবহার করুন",
+    "slide3Title": "লক্ষণ পরীক্ষা করুন",
+    "slide3Desc": "AI-চালিত সুপারিশ সহ আপনার লক্ষণগুলির ভিত্তিতে তাৎক্ষণিক ওষুধের পরামর্শ পান",
+    "slide4Title": "কখনো মাত্রা ভুলবেন না",
+    "slide4Desc": "আপনার ওষুধের জন্য স্মার্ট অনুস্মারক সেট করুন এবং আপনার স্বাস্থ্য যাত্রা ট্র্যাক করুন",
+    "slide5Title": "আপনার স্বাস্থ্য, সুরক্ষিত",
+    "slide5Desc": "আপনার সমস্ত স্বাস্থ্য ডেটা এনক্রিপ্ট করা এবং আপনার ডিভাইসে নিরাপদে সংরক্ষণ করা হয়"
+  },
+  "navigation": {
+    "home": "হোম",
+    "symptoms": "লক্ষণ",
+    "reminders": "অনুস্মারক",
+    "profile": "প্রোফাইল",
+    "help": "সাহায্য"
+  },
+  "login": {
+    "mobileLogin": "মোবাইল লগইন",
+    "enterPhone": "শুরু করতে আপনার মোবাইল নম্বর প্রবেশ করুন",
+    "enterOTP": "আপনার মোবাইলে পাঠানো OTP প্রবেশ করুন",
+    "completeRegistration": "আপনার নিবন্ধন সম্পূর্ণ করুন",
+    "mobileNumber": "মোবাইল নম্বর",
+    "sendOTP": "OTP পাঠান",
+    "sending": "পাঠাচ্ছে...",
+    "enterOTPField": "OTP প্রবেশ করুন",
+    "otpSentTo": "{{phone}} এ OTP পাঠানো হয়েছে",
+    "verifyOTP": "OTP যাচাই করুন",
+    "verifying": "যাচাই করছে...",
+    "resendOTP": "OTP পুনরায় পাঠান",
+    "resendOTPIn": "{{count}} সেকেন্ডে OTP পুনরায় পাঠান",
+    "fullName": "পূর্ণ নাম",
+    "fullNamePlaceholder": "আপনার পূর্ণ নাম প্রবেশ করুন",
+    "dateOfBirth": "জন্ম তারিখ (ঐচ্ছিক)",
+    "gender": "লিঙ্গ (ঐচ্ছিক)",
+    "selectGender": "লিঙ্গ নির্বাচন করুন",
+    "male": "পুরুষ",
+    "female": "মহিলা",
+    "other": "অন্যান্য",
+    "preferNotToSay": "বলতে চাই না",
+    "completeRegistrationButton": "নিবন্ধন সম্পূর্ণ করুন",
+    "registering": "নিবন্ধন করছে...",
+    "validPhoneRequired": "অনুগ্রহ করে একটি বৈধ মোবাইল নম্বর প্রবেশ করুন",
+    "validOTPRequired": "অনুগ্রহ করে একটি বৈধ 6-অঙ্কের OTP প্রবেশ করুন",
+    "nameRequired": "অনুগ্রহ করে আপনার নাম প্রবেশ করুন",
+    "otpSentSuccess": "OTP সফলভাবে পাঠানো হয়েছে!",
+    "loginSuccess": "লগইন সফল!",
+    "registrationSuccess": "নিবন্ধন সফল!",
+    "completeRegistrationPrompt": "অনুগ্রহ করে আপনার নিবন্ধন সম্পূর্ণ করুন",
+    "invalidOTP": "অবৈধ OTP",
+    "registrationFailed": "নিবন্ধন ব্যর্থ",
+    "waitBeforeResend": "পুনরায় পাঠানোর আগে {{count}} সেকেন্ড অপেক্ষা করুন",
+    "resendSuccess": "OTP সফলভাবে পুনরায় পাঠানো হয়েছে!",
+    "resendFailed": "OTP পুনরায় পাঠাতে ব্যর্থ",
+    "sendOTPFailed": "OTP পাঠাতে ব্যর্থ"
+  },
+  "help": {
+    "title": "সাহায্য ও সহায়তা",
+    "subtitle": "আমরা আপনাকে সাহায্য করার জন্য এখানে আছি",
+    "callUs": "আমাদের কল করুন",
+    "email": "ইমেইল",
+    "voiceGuidedHelp": "ভয়েস-নির্দেশিত সাহায্য",
+    "voiceGuidedDesc": "আপনার ভাষায় তাৎক্ষণিক সাহায্য পান",
+    "start": "শুরু করুন",
+    "faq": "প্রায়শই জিজ্ঞাসিত প্রশ্ন",
+    "liveChatSupport": "লাইভ চ্যাট সহায়তা",
+    "liveChatDesc": "তাৎক্ষণিক সহায়তার জন্য আমাদের সহায়তা দলের সাথে চ্যাট করুন",
+    "startChat": "চ্যাট শুরু করুন",
+    "appName": "স্বাস্থ্য বাণী",
+    "version": "সংস্করণ 1.0.0",
+    "trustedCompanion": "আপনার বিশ্বস্ত স্বাস্থ্য সঙ্গী",
+    "faq1Q": "আমি কীভাবে ওষুধ খুঁজব?",
+    "faq1A": "আপনি হোম স্ক্রিনে সার্চ বার ব্যবহার করে ওষুধ খুঁজতে পারেন। আপনি নাম টাইপ করতে পারেন, ক্যামেরা ব্যবহার করে প্রেসক্রিপশন স্ক্যান করতে পারেন বা ভয়েস ইনপুট ব্যবহার করতে পারেন।",
+    "faq2Q": "লক্ষণ পরামর্শগুলি কি সঠিক?",
+    "faq2A": "আমাদের লক্ষণ চেকার সাধারণ লক্ষণগুলির ভিত্তিতে সাধারণ পরামর্শ প্রদান করে। সঠিক নির্ণয় এবং চিকিত্সার জন্য সর্বদা একজন স্বাস্থ্যসেবা পেশাদারের সাথে পরামর্শ করুন।",
+    "faq3Q": "আমি কীভাবে ওষুধের অনুস্মারক সেট করব?",
+    "faq3A": "অনুস্মারক ট্যাবে যান এবং 'নতুন অনুস্মারক যোগ করুন' এ ট্যাপ করুন। কখনো মাত্রা ভুলতে না পেরে ওষুধের নাম, সময় এবং ফ্রিকোয়েন্সি প্রবেশ করুন।",
+    "faq4Q": "আমার স্বাস্থ্য ডেটা কি নিরাপদ?",
+    "faq4A": "হ্যাঁ, আপনার সমস্ত স্বাস্থ্য ডেটা এনক্রিপ্ট করা এবং আপনার ডিভাইসে নিরাপদে সংরক্ষণ করা হয়। আমরা আপনার গোপনীয়তা এবং নিরাপত্তাকে অগ্রাধিকার দিই।",
+    "faq5Q": "কোন ভাষাগুলি সমর্থিত?",
+    "faq5A": "অ্যাপটি ইংরেজি, হিন্দি, তামিল, তেলেগু, বাংলা, মারাঠি, গুজরাটি এবং কন্নড় সমর্থন করে। আপনি আপনার প্রোফাইল সেটিংস থেকে ভাষা পরিবর্তন করতে পারেন।",
+    "callingSupport": "সহায়তা কল করছে...",
+    "openingEmail": "ইমেইল খোলার হচ্ছে...",
+    "voiceHelpComingSoon": "ভয়েস সাহায্য শীঘ্রই আসছে!",
+    "chatSupportComingSoon": "চ্যাট সহায়তা শীঘ্রই আসছে!"
   },
   "languages": {
     "en": "English",
@@ -64,4 +218,3 @@
     "kn": "ಕನ್ನಡ (Kannada)"
   }
 }
-
