--- a/src/locales/gu/common.json
+++ b/src/locales/gu/common.json
@@ -16,7 +16,14 @@
     "close": "બંધ કરો",
     "back": "પાછળ",
     "next": "આગળ",
-    "done": "પૂર્ણ"
+    "done": "પૂર્ણ",
+    "skip": "ટાળો",
+    "getStarted": "શરૂ કરો",
+    "languageChanged": "ભાષા સફળતાપૂર્વક બદલાઈ!",
+    "languageChangeError": "ભાષા બદલવામાં નિષ્ફળ",
+    "loggedOut": "સફળતાપૂર્વક લોગ આઉટ!",
+    "editComingSoon": "સંપાદન ટૂંક સમયમાં આવશે!",
+    "notSet": "સેટ કર્યું નથી"
   },
   "home": {
     "greeting": "નમસ્તે, {{name}}!",
@@ -24,10 +31,18 @@
     "quickActions": "ઝડપી ક્રિયાઓ",
     "healthTips": "આજના આરોગ્ય ટિપ્સ",
     "aiAssistant": "AI સહાયક સાથે વાત કરો",
-    "aiAssistantDesc": "દવાઓ, લક્ષણો અથવા આરોગ્ય સલાહ વિશે તમારી ભાષામાં પૂછો"
+    "aiAssistantDesc": "દવાઓ, લક્ષણો અથવા આરોગ્ય સલાહ વિશે તમારી ભાષામાં પૂછો",
+    "healthTip1": "રોજ 8 ગ્લાસ પાણી પીઓ",
+    "healthTip2": "ડોક્ટરે સૂચવ્યું ન હોય તો ખાવા પછી દવાઓ લો",
+    "healthTip3": "રોજ 30 મિનિટ વ્યાયામ કરો",
+    "healthTip4": "7-8 કલાકની ઊંઘ લો",
+    "symptomChecker": "લક્ષણ ચેકર",
+    "myMedicines": "મારી દવાઓ",
+    "trackHealth": "આરોગ્ય ટ્રેક કરો"
   },
   "medicine": {
     "details": "દવા વિગતો",
+    "detailedInfo": "આ દવા વિશે વિગતવાર માહિતી",
     "name": "નામ",
     "genericName": "જનરિક નામ",
     "category": "શ્રેણી",
@@ -45,13 +60,152 @@
   },
   "profile": {
     "title": "પ્રોફાઇલ",
+    "managePreferences": "તમારી પ્રાધાન્યતાઓ સંભાળો",
+    "personalInfo": "વ્યક્તિગત માહિતી",
+    "name": "નામ",
+    "email": "ઇમેઇલ",
+    "phoneNumber": "ફોન નંબર",
     "preferences": "પ્રાધાન્યતાઓ",
     "notifications": "સૂચનાઓ",
     "medicationReminders": "દવા રીમાઇન્ડર",
+    "getNotified": "તમારા ડોઝ માટે સૂચના મેળવો",
     "healthTips": "આરોગ્ય ટિપ્સ",
+    "dailyAdvice": "દૈનિક આરોગ્ય સલાહ",
     "language": "ભાષા",
     "changeLanguage": "ભાષા બદલો",
-    "supports": "સમર્થન: હિંદી, તમિલ, તેલુગુ, બંગાળી, મરાઠી, ગુજરાતી, કન્નડ"
+    "supports": "સમર્થન: હિંદી, તમિલ, તેલુગુ, બંગાળી, મરાઠી, ગુજરાતી, કન્નડ",
+    "accessibility": "પ્રવેશયોગ્યતા સેટિંગ્સ",
+    "darkMode": "ડાર્ક મોડ",
+    "easierOnEyes": "આંખો માટે સરળ",
+    "largeText": "મોટું ટેક્સ્ટ",
+    "increaseFontSize": "ફોન્ટનું કદ વધારો",
+    "highContrast": "ઉચ્ચ કંટ્રાસ્ટ",
+    "betterVisibility": "સારી દ્રષ્ટિ",
+    "logOut": "લોગ આઉટ"
+  },
+  "symptoms": {
+    "title": "લક્ષણ ચેકર",
+    "subtitle": "દવા સૂચનાઓ મેળવવા માટે તમારા લક્ષણો પસંદ કરો",
+    "selectedSymptoms": "પસંદ કરેલ લક્ષણો",
+    "clearAll": "બધું સાફ કરો",
+    "commonSymptoms": "સામાન્ય લક્ષણો",
+    "checkSymptoms": "લક્ષણો તપાસો",
+    "selectAtLeastOne": "કૃપા કરીને ઓછામાં ઓછું એક લક્ષણ પસંદ કરો",
+    "disclaimer": "આ ફક્ત માહિતી માટે છે. યોગ્ય નિદાન માટે ડોક્ટરની સલાહ લો.",
+    "suggestedMedicines": "સૂચિત દવાઓ",
+    "checkDifferentSymptoms": "વિવિધ લક્ષણો તપાસો",
+    "headache": "માથું દુખવું",
+    "fever": "તાવ",
+    "cough": "ખાંસી",
+    "cold": "ઠંડી",
+    "bodyPain": "શરીર દુખવું",
+    "nausea": "વમન",
+    "dizziness": "ચક્કર આવવું",
+    "fatigue": "થાક",
+    "soreThroat": "ગળામાં દુખવું",
+    "chestPain": "છાતી દુખવું"
+  },
+  "reminders": {
+    "title": "દવા રીમાઇન્ડર",
+    "subtitle": "તમારો ડોઝ કદી ચૂકશો નહીં",
+    "addNewReminder": "નવું રીમાઇન્ડર ઉમેરો",
+    "todaysReminders": "આજના રીમાઇન્ડર",
+    "noActiveReminders": "કોઈ સક્રિય રીમાઇન્ડર નથી",
+    "completedToday": "આજે પૂર્ણ થયું",
+    "reminderUpdated": "રીમાઇન્ડર અપડેટ થયું",
+    "reminderDeleted": "રીમાઇન્ડર કાઢી નાખ્યું",
+    "addReminderComingSoon": "રીમાઇન્ડર ફીચર ટૂંક સમયમાં આવશે!",
+    "daily": "દૈનિક",
+    "weekly": "સાપ્તાહિક",
+    "monthly": "માસિક"
+  },
+  "onboarding": {
+    "slide1Title": "AI સહાયક સાથે વાત કરો",
+    "slide1Desc": "તમારી ભાષામાં કુદરતી રીતે બોલો. AI ચાલિત દવાઓ, લક્ષણો અને આરોગ્ય સલાહ વિશે તાત્કાલિક જવાબો મેળવો",
+    "slide2Title": "તમારી દવાઓ શોધો",
+    "slide2Desc": "નામ દ્વારા દવાઓ શોધો, પ્રિસ્ક્રિપ્શન સ્કેન કરો અથવા તમારી પ્રિફર્ડ ભાષામાં વૉઇસ ઇનપુટ વપરાય",
+    "slide3Title": "લક્ષણો તપાસો",
+    "slide3Desc": "AI ચાલિત ભલામણો સાથે તમારા લક્ષણોના આધારે તાત્કાલિક દવાની ભલામણો મેળવો",
+    "slide4Title": "ડોઝ કદી ચૂકશો નહીં",
+    "slide4Desc": "તમારી દવાઓ માટે સ્માર્ટ રીમાઇન્ડર સેટ કરો અને તમારી આરોગ્ય યાત્રા ટ્રેક કરો",
+    "slide5Title": "તમારું આરોગ્ય, સુરક્ષિત",
+    "slide5Desc": "તમારો બધો આરોગ્ય ડેટા એનક્રિપ્ટ થયેલો છે અને તમારા ઉપકરણ પર સુરક્ષિત રીતે સંગ્રહિત છે"
+  },
+  "navigation": {
+    "home": "હોમ",
+    "symptoms": "લક્ષણો",
+    "reminders": "રીમાઇન્ડર",
+    "profile": "પ્રોફાઇલ",
+    "help": "મદદ"
+  },
+  "login": {
+    "mobileLogin": "મોબાઇલ લોગિન",
+    "enterPhone": "શરૂ કરવા માટે તમારો મોબાઇલ નંબર દાખલ કરો",
+    "enterOTP": "તમારા મોબાઇલ પર મોકલેલ OTP દાખલ કરો",
+    "completeRegistration": "તમારી નોંધણી પૂર્ણ કરો",
+    "mobileNumber": "મોબાઇલ નંબર",
+    "sendOTP": "OTP મોકલો",
+    "sending": "મોકલી રહ્યું છે...",
+    "enterOTPField": "OTP દાખલ કરો",
+    "otpSentTo": "{{phone}} ને OTP મોકલ્યો",
+    "verifyOTP": "OTP ચકાસો",
+    "verifying": "ચકાસી રહ્યું છે...",
+    "resendOTP": "OTP ફરીથી મોકલો",
+    "resendOTPIn": "{{count}} સેકંડમાં OTP ફરીથી મોકલો",
+    "fullName": "પૂર્ણ નામ",
+    "fullNamePlaceholder": "તમારું પૂર્ણ નામ દાખલ કરો",
+    "dateOfBirth": "જન્મ તારીખ (વૈકલ્પિક)",
+    "gender": "લિંગ (વૈકલ્પિક)",
+    "selectGender": "લિંગ પસંદ કરો",
+    "male": "પુરુષ",
+    "female": "સ્ત્રી",
+    "other": "અન્ય",
+    "preferNotToSay": "કહેવું નથી માંગતા",
+    "completeRegistrationButton": "નોંધણી પૂર્ણ કરો",
+    "registering": "નોંધણી કરી રહ્યું છે...",
+    "validPhoneRequired": "કૃપા કરીને માન્ય મોબાઇલ નંબર દાખલ કરો",
+    "validOTPRequired": "કૃપા કરીને માન્ય 6-અંકનો OTP દાખલ કરો",
+    "nameRequired": "કૃપા કરીને તમારું નામ દાખલ કરો",
+    "otpSentSuccess": "OTP સફળતાપૂર્વક મોકલ્યો!",
+    "loginSuccess": "લોગિન સફળ!",
+    "registrationSuccess": "નોંધણી સફળ!",
+    "completeRegistrationPrompt": "કૃપા કરીને તમારી નોંધણી પૂર્ણ કરો",
+    "invalidOTP": "અમાન્ય OTP",
+    "registrationFailed": "નોંધણી નિષ્ફળ",
+    "waitBeforeResend": "ફરીથી મોકલતા પહેલાં {{count}} સેકંડ રાહ જુઓ",
+    "resendSuccess": "OTP સફળતાપૂર્વક ફરીથી મોકલ્યો!",
+    "resendFailed": "OTP ફરીથી મોકલવામાં નિષ્ફળ",
+    "sendOTPFailed": "OTP મોકલવામાં નિષ્ફળ"
+  },
+  "help": {
+    "title": "મદદ અને સમર્થન",
+    "subtitle": "તમારી મદદ કરવા માટે અમે અહીં છીએ",
+    "callUs": "અમને કોલ કરો",
+    "email": "ઇમેઇલ",
+    "voiceGuidedHelp": "વૉઇસ-માર્ગદર્શિત મદદ",
+    "voiceGuidedDesc": "તમારી ભાષામાં તાત્કાલિક મદદ મેળવો",
+    "start": "શરૂ કરો",
+    "faq": "વારંવાર પૂછાયેલા પ્રશ્નો",
+    "liveChatSupport": "લાઇવ ચેટ સમર્થન",
+    "liveChatDesc": "તાત્કાલિક સહાય માટે અમારી સમર્થન ટીમ સાથે ચેટ કરો",
+    "startChat": "ચેટ શરૂ કરો",
+    "appName": "સ્વસ્થ્ય વાણી",
+    "version": "સંસ્કરણ 1.0.0",
+    "trustedCompanion": "તમારો વિશ્વસનીય આરોગ્ય સાથી",
+    "faq1Q": "હું દવાઓ કેવી રીતે શોધી શકું?",
+    "faq1A": "તમે હોમ સ્ક્રીન પર સર્ચ બારનો ઉપયોગ કરીને દવાઓ શોધી શકો છો. તમે નામ ટાઇપ કરી શકો છો, કેમેરાનો ઉપયોગ કરીને પ્રિસ્ક્રિપ્શન સ્કેન કરી શકો છો અથવા વૉઇસ ઇનપુટ વપરાય",
+    "faq2Q": "લક્ષણ સૂચનાઓ ચોક્કસ છે?",
+    "faq2A": "અમારું લક્ષણ ચેકર સામાન્ય લક્ષણોના આધારે સામાન્ય સૂચનાઓ આપે છે. યોગ્ય નિદાન અને સારવાર માટે હંમેશા આરોગ્ય વ્યાવસાયિકની સલાહ લો.",
+    "faq3Q": "હું દવા રીમાઇન્ડર કેવી રીતે સેટ કરી શકું?",
+    "faq3A": "રીમાઇન્ડર ટેબ પર જાઓ અને 'નવું રીમાઇન્ડર ઉમેરો' પર ટેપ કરો. ડોઝ કદી ચૂકશો નહીં માટે દવાનું નામ, સમય અને આવર્તન દાખલ કરો.",
+    "faq4Q": "મારો આરોગ્ય ડેટા સુરક્ષિત છે?",
+    "faq4A": "હા, તમારો બધો આરોગ્ય ડેટા એનક્રિપ્ટ થયેલો છે અને તમારા ઉપકરણ પર સુરક્ષિત રીતે સંગ્રહિત છે. અમે તમારી ગોપનીયતા અને સુરક્ષાને પ્રાધાન્ય આપીએ છીએ.",
+    "faq5Q": "કઈ ભાષાઓ સમર્થિત છે?",
+    "faq5A": "એપ્લિકેશન અંગ્રેજી, હિંદી, તમિલ, તેલુગુ, બંગાળી, મરાઠી, ગુજરાતી અને કન્નડ સમર્થન કરે છે. તમે તમારી પ્રોફાઇલ સેટિંગ્સમાંથી ભાષા બદલી શકો છો.",
+    "callingSupport": "સમર્થન કોલ કરી રહ્યું છે...",
+    "openingEmail": "ઇમેઇલ ખોલી રહ્યું છે...",
+    "voiceHelpComingSoon": "વૉઇસ મદદ ટૂંક સમયમાં આવશે!",
+    "chatSupportComingSoon": "ચેટ સમર્થન ટૂંક સમયમાં આવશે!"
   },
   "languages": {
     "en": "English",
@@ -64,4 +218,3 @@
     "kn": "ಕನ್ನಡ (Kannada)"
   }
 }
-
