--- a/src/locales/hi/common.json
+++ b/src/locales/hi/common.json
@@ -16,7 +16,14 @@
     "close": "बंद करें",
     "back": "वापस",
     "next": "अगला",
-    "done": "पूर्ण"
+    "done": "पूर्ण",
+    "skip": "छोड़ें",
+    "getStarted": "शुरू करें",
+    "languageChanged": "भाषा सफलतापूर्वक बदल गई!",
+    "languageChangeError": "भाषा बदलने में विफल",
+    "loggedOut": "सफलतापूर्वक लॉग आउट हो गए!",
+    "editComingSoon": "संपादन जल्द ही आ रहा है!",
+    "notSet": "सेट नहीं किया गया"
   },
   "home": {
     "greeting": "नमस्ते, {{name}}!",
@@ -24,10 +31,18 @@
     "quickActions": "त्वरित कार्रवाई",
     "healthTips": "आज के स्वास्थ्य सुझाव",
     "aiAssistant": "AI असिस्टेंट से बात करें",
-    "aiAssistantDesc": "दवाओं, लक्षणों, या स्वास्थ्य सलाह के बारे में अपनी भाषा में पूछें"
+    "aiAssistantDesc": "दवाओं, लक्षणों, या स्वास्थ्य सलाह के बारे में अपनी भाषा में पूछें",
+    "healthTip1": "प्रतिदिन 8 गिलास पानी पिएं",
+    "healthTip2": "जब तक डॉक्टर द्वारा निर्धारित न हो, खाने के बाद दवा लें",
+    "healthTip3": "प्रतिदिन 30 मिनट व्यायाम करें",
+    "healthTip4": "7-8 घंटे की नींद लें",
+    "symptomChecker": "लक्षण जांचकर्ता",
+    "myMedicines": "मेरी दवाएं",
+    "trackHealth": "स्वास्थ्य ट्रैक करें"
   },
   "medicine": {
     "details": "दवा विवरण",
+    "detailedInfo": "इस दवा के बारे में विस्तृत जानकारी",
     "name": "नाम",
     "genericName": "सामान्य नाम",
     "category": "श्रेणी",
@@ -45,13 +60,152 @@
   },
   "profile": {
     "title": "प्रोफाइल",
+    "managePreferences": "अपनी वरीयताएं प्रबंधित करें",
+    "personalInfo": "व्यक्तिगत जानकारी",
+    "name": "नाम",
+    "email": "ईमेल",
+    "phoneNumber": "फोन नंबर",
     "preferences": "वरीयताएं",
     "notifications": "सूचनाएं",
     "medicationReminders": "दवा अनुस्मारक",
+    "getNotified": "अपनी खुराक के लिए सूचित हो जाएं",
     "healthTips": "स्वास्थ्य सुझाव",
+    "dailyAdvice": "दैनिक कल्याण सलाह",
     "language": "भाषा",
     "changeLanguage": "भाषा बदलें",
-    "supports": "समर्थित: हिंदी, तमिल, तेलुगु, बंगाली, मराठी, गुजराती, कन्नड़"
+    "supports": "समर्थित: हिंदी, तमिल, तेलुगु, बंगाली, मराठी, गुजराती, कन्नड़",
+    "accessibility": "एक्सेसिबिलिटी सेटिंग्स",
+    "darkMode": "डार्क मोड",
+    "easierOnEyes": "आंखों के लिए आसान",
+    "largeText": "बड़ा टेक्स्ट",
+    "increaseFontSize": "फॉन्ट आकार बढ़ाएं",
+    "highContrast": "उच्च कंट्रास्ट",
+    "betterVisibility": "बेहतर दृश्यता",
+    "logOut": "लॉग आउट करें"
+  },
+  "symptoms": {
+    "title": "लक्षण जांचकर्ता",
+    "subtitle": "दवा सुझाव प्राप्त करने के लिए अपने लक्षण चुनें",
+    "selectedSymptoms": "चयनित लक्षण",
+    "clearAll": "सभी साफ करें",
+    "commonSymptoms": "सामान्य लक्षण",
+    "checkSymptoms": "लक्षण जांचें",
+    "selectAtLeastOne": "कृपया कम से कम एक लक्षण चुनें",
+    "disclaimer": "यह केवल सूचना के लिए है। कृपया उचित निदान के लिए डॉक्टर से सलाह लें।",
+    "suggestedMedicines": "सुझाई गई दवाएं",
+    "checkDifferentSymptoms": "अलग लक्षण जांचें",
+    "headache": "सिरदर्द",
+    "fever": "बुखार",
+    "cough": "खांसी",
+    "cold": "ठंड",
+    "bodyPain": "शरीर दर्द",
+    "nausea": "मतली",
+    "dizziness": "चक्कर आना",
+    "fatigue": "थकान",
+    "soreThroat": "गले में खराश",
+    "chestPain": "छाती में दर्द"
+  },
+  "reminders": {
+    "title": "दवा अनुस्मारक",
+    "subtitle": "अपनी खुराक कभी न चूकें",
+    "addNewReminder": "नया अनुस्मारक जोड़ें",
+    "todaysReminders": "आज के अनुस्मारक",
+    "noActiveReminders": "कोई सक्रिय अनुस्मारक नहीं",
+    "completedToday": "आज पूर्ण हुआ",
+    "reminderUpdated": "अनुस्मारक अपडेट किया गया",
+    "reminderDeleted": "अनुस्मारक हटाया गया",
+    "addReminderComingSoon": "अनुस्मारक सुविधा जल्द ही आ रही है!",
+    "daily": "दैनिक",
+    "weekly": "साप्ताहिक",
+    "monthly": "मासिक"
+  },
+  "onboarding": {
+    "slide1Title": "AI असिस्टेंट से बात करें",
+    "slide1Desc": "अपनी भाषा में स्वाभाविक रूप से बोलें। AI द्वारा संचालित दवाओं, लक्षणों और स्वास्थ्य सलाह के बारे में तत्काल उत्तर प्राप्त करें",
+    "slide2Title": "अपनी दवाएं खोजें",
+    "slide2Desc": "नाम से दवाएं खोजें, नुस्खे स्कैन करें, या अपनी पसंदीदा भाषा में आवाज इनपुट का उपयोग करें",
+    "slide3Title": "लक्षण जांचें",
+    "slide3Desc": "AI-संचालित सिफारिशों के साथ अपने लक्षणों के आधार पर तत्काल दवा सुझाव प्राप्त करें",
+    "slide4Title": "कभी खुराक न चूकें",
+    "slide4Desc": "अपनी दवाओं के लिए स्मार्ट अनुस्मारक सेट करें और अपनी स्वास्थ्य यात्रा को ट्रैक करें",
+    "slide5Title": "आपका स्वास्थ्य, सुरक्षित",
+    "slide5Desc": "आपका सभी स्वास्थ्य डेटा एन्क्रिप्टेड है और आपके डिवाइस पर सुरक्षित रूप से संग्रहीत है"
+  },
+  "navigation": {
+    "home": "होम",
+    "symptoms": "लक्षण",
+    "reminders": "अनुस्मारक",
+    "profile": "प्रोफाइल",
+    "help": "मदद"
+  },
+  "login": {
+    "mobileLogin": "मोबाइल लॉगिन",
+    "enterPhone": "शुरू करने के लिए अपना मोबाइल नंबर दर्ज करें",
+    "enterOTP": "अपने मोबाइल पर भेजे गए OTP को दर्ज करें",
+    "completeRegistration": "अपना पंजीकरण पूरा करें",
+    "mobileNumber": "मोबाइल नंबर",
+    "sendOTP": "OTP भेजें",
+    "sending": "भेज रहे हैं...",
+    "enterOTPField": "OTP दर्ज करें",
+    "otpSentTo": "{{phone}} पर OTP भेजा गया",
+    "verifyOTP": "OTP सत्यापित करें",
+    "verifying": "सत्यापन कर रहे हैं...",
+    "resendOTP": "OTP पुनः भेजें",
+    "resendOTPIn": "{{count}} सेकंड में OTP पुनः भेजें",
+    "fullName": "पूरा नाम",
+    "fullNamePlaceholder": "अपना पूरा नाम दर्ज करें",
+    "dateOfBirth": "जन्म तिथि (वैकल्पिक)",
+    "gender": "लिंग (वैकल्पिक)",
+    "selectGender": "लिंग चुनें",
+    "male": "पुरुष",
+    "female": "महिला",
+    "other": "अन्य",
+    "preferNotToSay": "कहना नहीं चाहते",
+    "completeRegistrationButton": "पंजीकरण पूरा करें",
+    "registering": "पंजीकरण कर रहे हैं...",
+    "validPhoneRequired": "कृपया एक वैध फोन नंबर दर्ज करें",
+    "validOTPRequired": "कृपया एक वैध 6-अंकीय OTP दर्ज करें",
+    "nameRequired": "कृपया अपना नाम दर्ज करें",
+    "otpSentSuccess": "OTP सफलतापूर्वक भेजा गया!",
+    "loginSuccess": "लॉगिन सफल!",
+    "registrationSuccess": "पंजीकरण सफल!",
+    "completeRegistrationPrompt": "कृपया अपना पंजीकरण पूरा करें",
+    "invalidOTP": "अमान्य OTP",
+    "registrationFailed": "पंजीकरण विफल",
+    "waitBeforeResend": "पुनः भेजने से पहले कृपया {{count}} सेकंड प्रतीक्षा करें",
+    "resendSuccess": "OTP सफलतापूर्वक पुनः भेजा गया!",
+    "resendFailed": "OTP पुनः भेजने में विफल",
+    "sendOTPFailed": "OTP भेजने में विफल"
+  },
+  "help": {
+    "title": "मदद और सहायता",
+    "subtitle": "हम यहां आपकी मदद के लिए हैं",
+    "callUs": "हमें कॉल करें",
+    "email": "ईमेल",
+    "voiceGuidedHelp": "आवाज-निर्देशित मदद",
+    "voiceGuidedDesc": "अपनी भाषा में तत्काल मदद प्राप्त करें",
+    "start": "शुरू करें",
+    "faq": "अक्सर पूछे जाने वाले प्रश्न",
+    "liveChatSupport": "लाइव चैट सहायता",
+    "liveChatDesc": "तत्काल सहायता के लिए हमारी सहायता टीम से चैट करें",
+    "startChat": "चैट शुरू करें",
+    "appName": "स्वस्थ्य वाणी",
+    "version": "संस्करण 1.0.0",
+    "trustedCompanion": "आपका विश्वसनीय स्वास्थ्य साथी",
+    "faq1Q": "मैं दवाएं कैसे खोजूं?",
+    "faq1A": "आप होम स्क्रीन पर खोज बार का उपयोग करके दवाएं खोज सकते हैं। आप नाम टाइप कर सकते हैं, कैमरे का उपयोग करके नुस्खा स्कैन कर सकते हैं, या आवाज इनपुट का उपयोग कर सकते हैं।",
+    "faq2Q": "क्या लक्षण सुझाव सटीक हैं?",
+    "faq2A": "हमारा लक्षण जांचकर्ता सामान्य लक्षणों के आधार पर सामान्य सुझाव प्रदान करता है। उचित निदान और उपचार के लिए हमेशा एक स्वास्थ्य पेशेवर से सलाह लें।",
+    "faq3Q": "मैं दवा अनुस्मारक कैसे सेट करूं?",
+    "faq3A": "अनुस्मारक टैब पर जाएं और 'नया अनुस्मारक जोड़ें' पर टैप करें। खुराक कभी न चूकने के लिए दवा का नाम, समय और आवृत्ति दर्ज करें।",
+    "faq4Q": "क्या मेरा स्वास्थ्य डेटा सुरक्षित है?",
+    "faq4A": "हां, आपका सभी स्वास्थ्य डेटा एन्क्रिप्टेड है और आपके डिवाइस पर सुरक्षित रूप से संग्रहीत है। हम आपकी गोपनीयता और सुरक्षा को प्राथमिकता देते हैं।",
+    "faq5Q": "कौन सी भाषाएं समर्थित हैं?",
+    "faq5A": "एप्लिकेशन अंग्रेजी, हिंदी, तमिल, तेलुगु, बंगाली, मराठी, गुजराती और कन्नड़ का समर्थन करता है। आप अपनी प्रोफाइल सेटिंग्स से भाषा बदल सकते हैं।",
+    "callingSupport": "सहायता कॉल कर रहे हैं...",
+    "openingEmail": "ईमेल खोल रहे हैं...",
+    "voiceHelpComingSoon": "आवाज मदद जल्द ही आ रही है!",
+    "chatSupportComingSoon": "चैट सहायता जल्द ही आ रही है!"
   },
   "languages": {
     "en": "English",
@@ -64,4 +218,3 @@
     "kn": "ಕನ್ನಡ (Kannada)"
   }
 }
-
