--- a/src/locales/kn/common.json
+++ b/src/locales/kn/common.json
@@ -16,7 +16,14 @@
     "close": "ಮುಚ್ಚಿ",
     "back": "ಹಿಂದೆ",
     "next": "ಮುಂದೆ",
-    "done": "ಪೂರ್ಣಗೊಂಡಿದೆ"
+    "done": "ಪೂರ್ಣಗೊಂಡಿದೆ",
+    "skip": "ಬಿಟ್ಟುಬಿಡಿ",
+    "getStarted": "ಪ್ರಾರಂಭಿಸಿ",
+    "languageChanged": "ಭಾಷೆಯನ್ನು ಯಶಸ್ವಿಯಾಗಿ ಬದಲಾಯಿಸಲಾಯಿತು!",
+    "languageChangeError": "ಭಾಷೆಯನ್ನು ಬದಲಾಯಿಸಲು ವಿಫಲವಾಗಿದೆ",
+    "loggedOut": "ಯಶಸ್ವಿಯಾಗಿ ಲಾಗ್ ಔಟ್ ಆಗಿದೆ!",
+    "editComingSoon": "ಸಂಪಾದನೆ ಶೀಘ್ರದಲ್ಲೇ ಬರುತ್ತಿದೆ!",
+    "notSet": "ಸೆಟ್ ಮಾಡಲಾಗಿಲ್ಲ"
   },
   "home": {
     "greeting": "ನಮಸ್ಕಾರ, {{name}}!",
@@ -24,10 +31,18 @@
     "quickActions": "ತ್ವರಿತ ಕ್ರಿಯೆಗಳು",
     "healthTips": "ಇಂದಿನ ಆರೋಗ್ಯ ಸಲಹೆಗಳು",
     "aiAssistant": "AI ಸಹಾಯಕನೊಂದಿಗೆ ಮಾತನಾಡಿ",
-    "aiAssistantDesc": "ಮದ್ದುಗಳು, ಲಕ್ಷಣಗಳು ಅಥವಾ ಆರೋಗ್ಯ ಸಲಹೆಗಳ ಕುರಿತು ನಿಮ್ಮ ಭಾಷೆಯಲ್ಲಿ ಕೇಳಿ"
+    "aiAssistantDesc": "ಮದ್ದುಗಳು, ಲಕ್ಷಣಗಳು ಅಥವಾ ಆರೋಗ್ಯ ಸಲಹೆಗಳ ಕುರಿತು ನಿಮ್ಮ ಭಾಷೆಯಲ್ಲಿ ಕೇಳಿ",
+    "healthTip1": "ಪ್ರತಿದಿನ 8 ಗ್ಲಾಸ್ ನೀರು ಕುಡಿಯಿರಿ",
+    "healthTip2": "ವೈದ್ಯರು ನಿಗದಿಪಡಿಸದಿದ್ದರೆ ಊಟದ ನಂತರ ಮದ್ದುಗಳನ್ನು ತೆಗೆದುಕೊಳ್ಳಿ",
+    "healthTip3": "ಪ್ರತಿದಿನ 30 ನಿಮಿಷ ವ್ಯಾಯಾಮ ಮಾಡಿ",
+    "healthTip4": "7-8 ಗಂಟೆ ನಿದ್ರೆ ಮಾಡಿ",
+    "symptomChecker": "ಲಕ್ಷಣ ಪರಿಶೀಲಕ",
+    "myMedicines": "ನನ್ನ ಮದ್ದುಗಳು",
+    "trackHealth": "ಆರೋಗ್ಯವನ್ನು ಟ್ರ್ಯಾಕ್ ಮಾಡಿ"
   },
   "medicine": {
     "details": "ಮದ್ದು ವಿವರಗಳು",
+    "detailedInfo": "ಈ ಮದ್ದಿನ ಬಗ್ಗೆ ವಿವರವಾದ ಮಾಹಿತಿ",
     "name": "ಹೆಸರು",
     "genericName": "ಸಾಮಾನ್ಯ ಹೆಸರು",
     "category": "ವರ್ಗ",
@@ -45,13 +60,152 @@
   },
   "profile": {
     "title": "ಪ್ರೊಫೈಲ್",
+    "managePreferences": "ನಿಮ್ಮ ಆದ್ಯತೆಗಳನ್ನು ನಿರ್ವಹಿಸಿ",
+    "personalInfo": "ವೈಯಕ್ತಿಕ ಮಾಹಿತಿ",
+    "name": "ಹೆಸರು",
+    "email": "ಇಮೇಲ್",
+    "phoneNumber": "ಫೋನ್ ನಂಬರ್",
     "preferences": "ಆದ್ಯತೆಗಳು",
     "notifications": "ಅಧಿಸೂಚನೆಗಳು",
     "medicationReminders": "ಮದ್ದು ನೆನಪುಗಳು",
+    "getNotified": "ನಿಮ್ಮ ಮದ್ದುಗಳಿಗೆ ಅಧಿಸೂಚನೆ ಪಡೆಯಿರಿ",
     "healthTips": "ಆರೋಗ್ಯ ಸಲಹೆಗಳು",
+    "dailyAdvice": "ದೈನಂದಿನ ಆರೋಗ್ಯ ಸಲಹೆ",
     "language": "ಭಾಷೆ",
     "changeLanguage": "ಭಾಷೆಯನ್ನು ಬದಲಾಯಿಸಿ",
-    "supports": "ಬೆಂಬಲಿಸಿದ: ಹಿಂದಿ, ತಮಿಳು, ತೆಲುಗು, ಬಂಗಾಳಿ, ಮರಾಠಿ, ಗುಜರಾತಿ, ಕನ್ನಡ"
+    "supports": "ಬೆಂಬಲಿಸಿದ: ಹಿಂದಿ, ತಮಿಳು, ತೆಲುಗು, ಬಂಗಾಳಿ, ಮರಾಠಿ, ಗುಜರಾತಿ, ಕನ್ನಡ",
+    "accessibility": "ಪ್ರವೇಶಸಾಧ್ಯತೆ ಸೆಟ್ಟಿಂಗ್ಗಳು",
+    "darkMode": "ಡಾರ್ಕ್ ಮೋಡ್",
+    "easierOnEyes": "ಕಣ್ಣುಗಳಿಗೆ ಸುಲಭ",
+    "largeText": "ದೊಡ್ಡ ಪಠ್ಯ",
+    "increaseFontSize": "ಫಾಂಟ್ ಗಾತ್ರವನ್ನು ಹೆಚ್ಚಿಸಿ",
+    "highContrast": "ಹೆಚ್ಚಿನ ಕontrast",
+    "betterVisibility": "ಉತ್ತಮ ದೃಶ್ಯತೆ",
+    "logOut": "ಲಾಗ್ ಔಟ್"
+  },
+  "symptoms": {
+    "title": "ಲಕ್ಷಣ ಪರಿಶೀಲಕ",
+    "subtitle": "ಮದ್ದು ಸಲಹೆಗಳನ್ನು ಪಡೆಯಲು ನಿಮ್ಮ ಲಕ್ಷಣಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+    "selectedSymptoms": "ಆಯ್ಕೆಮಾಡಿದ ಲಕ್ಷಣಗಳು",
+    "clearAll": "ಎಲ್ಲವನ್ನೂ ಅಳಿಸಿ",
+    "commonSymptoms": "ಸಾಮಾನ್ಯ ಲಕ್ಷಣಗಳು",
+    "checkSymptoms": "ಲಕ್ಷಣಗಳನ್ನು ಪರಿಶೀಲಿಸಿ",
+    "selectAtLeastOne": "ದಯವಿಟ್ಟು ಕನಿಷ್ಠ ಒಂದು ಲಕ್ಷಣವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+    "disclaimer": "ಇದು ಮಾಹಿತಿಗಾಗಿ ಮಾತ್ರ. ಸರಿಯಾದ ನಿದಾನಕ್ಕಾಗಿ ವೈದ್ಯರನ್ನು ಸಂಪ್ರದಿಸಿ.",
+    "suggestedMedicines": "ಸೂಚಿಸಿದ ಮದ್ದುಗಳು",
+    "checkDifferentSymptoms": "ವಿಭಿನ್ನ ಲಕ್ಷಣಗಳನ್ನು ಪರಿಶೀಲಿಸಿ",
+    "headache": "ತಲೆನೋವು",
+    "fever": "ಜ್ವರ",
+    "cough": "ಕೆಮ್ಮು",
+    "cold": "ಸೈನಸ್",
+    "bodyPain": "ದೇಹ ನೋವು",
+    "nausea": "ವಾಕರಿಕೆ",
+    "dizziness": "ತಲೆತಿರುಗುವಿಕೆ",
+    "fatigue": "ಅಲಸತೆ",
+    "soreThroat": "ಗಂಟಲು ನೋವು",
+    "chestPain": "ಎದೆ ನೋವು"
+  },
+  "reminders": {
+    "title": "ಮದ್ದು ನೆನಪುಗಳು",
+    "subtitle": "ನಿಮ್ಮ ಮದ್ದನ್ನು ಎಂದಿಗೂ ಮರೆಯಬೇಡಿ",
+    "addNewReminder": "ಹೊಸ ನೆನಪು ಸೇರಿಸಿ",
+    "todaysReminders": "ಇಂದಿನ ನೆನಪುಗಳು",
+    "noActiveReminders": "ಸಕ್ರಿಯ ನೆನಪುಗಳು ಇಲ್ಲ",
+    "completedToday": "ಇಂದು ಪೂರ್ಣಗೊಂಡಿದೆ",
+    "reminderUpdated": "ನೆನಪು ನವೀಕರಿಸಲಾಗಿದೆ",
+    "reminderDeleted": "ನೆನಪು ಅಳಿಸಲಾಗಿದೆ",
+    "addReminderComingSoon": "ನೆನಪು ವೈಶಿಷ್ಟ್ಯವು ಶೀಘ್ರದಲ್ಲೇ ಬರುತ್ತಿದೆ!",
+    "daily": "ದೈನಂದಿನ",
+    "weekly": "ವಾರಕ್ಕೆ",
+    "monthly": "ಮಾಸಿಕ"
+  },
+  "onboarding": {
+    "slide1Title": "AI ಸಹಾಯಕನೊಂದಿಗೆ ಮಾತನಾಡಿ",
+    "slide1Desc": "ನಿಮ್ಮ ಭಾಷೆಯಲ್ಲಿ ನೈಸರ್ಗಿಕವಾಗಿ ಮಾತನಾಡಿ. AI ಚಾಲಿತ ಮದ್ದುಗಳು, ಲಕ್ಷಣಗಳು ಮತ್ತು ಆರೋಗ್ಯ ಸಲಹೆಗಳ ಬಗ್ಗೆ ತತ್ಕ್ಷಣದ ಉತ್ತರಗಳನ್ನು ಪಡೆಯಿರಿ",
+    "slide2Title": "ನಿಮ್ಮ ಮದ್ದುಗಳನ್ನು ಹುಡುಕಿ",
+    "slide2Desc": "ಹೆಸರಿನಿಂದ ಮದ್ದುಗಳನ್ನು ಹುಡುಕಿ, ಪ್ರಿಸ್ಕ್ರಿಪ್ಷನ್ಗಳನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಿ ಅಥವಾ ನಿಮ್ಮ ಆದ್ಯತೆಯ ಭಾಷೆಯಲ್ಲಿ ಧ್ವನಿ ಇನ್ಪುಟ್ ಬಳಸಿ",
+    "slide3Title": "ಲಕ್ಷಣಗಳನ್ನು ಪರಿಶೀಲಿಸಿ",
+    "slide3Desc": "AI ಚಾಲಿತ ಶಿಫಾರಸುಗಳೊಂದಿಗೆ ನಿಮ್ಮ ಲಕ್ಷಣಗಳ ಆಧಾರದ ಮೇಲೆ ತತ್ಕ್ಷಣದ ಮದ್ದು ಶಿಫಾರಸುಗಳನ್ನು ಪಡೆಯಿರಿ",
+    "slide4Title": "ಮದ್ದನ್ನು ಎಂದಿಗೂ ಮರೆಯಬೇಡಿ",
+    "slide4Desc": "ನಿಮ್ಮ ಮದ್ದುಗಳಿಗಾಗಿ ಸ್ಮಾರ್ಟ್ ನೆನಪುಗಳನ್ನು ಸೆಟ್ ಮಾಡಿ ಮತ್ತು ನಿಮ್ಮ ಆರೋಗ್ಯ ಪ್ರಯಾಣವನ್ನು ಟ್ರ್ಯಾಕ್ ಮಾಡಿ",
+    "slide5Title": "ನಿಮ್ಮ ಆರೋಗ್ಯ, ಸುರಕ್ಷಿತ",
+    "slide5Desc": "ನಿಮ್ಮ ಎಲ್ಲಾ ಆರೋಗ್ಯ ಡೇಟಾವನ್ನು ಎನ್ಕ್ರಿಪ್ಟ್ ಮಾಡಲಾಗಿದೆ ಮತ್ತು ನಿಮ್ಮ ಸಾಧನದಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿ ಸಂಗ್ರಹಿಸಲಾಗಿದೆ"
+  },
+  "navigation": {
+    "home": "ಹೋಮ್",
+    "symptoms": "ಲಕ್ಷಣಗಳು",
+    "reminders": "ನೆನಪುಗಳು",
+    "profile": "ಪ್ರೊಫೈಲ್",
+    "help": "ಸಹಾಯ"
+  },
+  "login": {
+    "mobileLogin": "ಮೊಬೈಲ್ ಲಾಗಿನ್",
+    "enterPhone": "ಪ್ರಾರಂಭಿಸಲು ನಿಮ್ಮ ಮೊಬೈಲ್ ನಂಬರ್ ನಮೂದಿಸಿ",
+    "enterOTP": "ನಿಮ್ಮ ಮೊಬೈಲ್‌ಗೆ ಕಳುಹಿಸಲಾದ OTP ನಮೂದಿಸಿ",
+    "completeRegistration": "ನಿಮ್ಮ ನೋಂದಣಿಯನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ",
+    "mobileNumber": "ಮೊಬೈಲ್ ನಂಬರ್",
+    "sendOTP": "OTP ಕಳುಹಿಸಿ",
+    "sending": "ಕಳುಹಿಸುತ್ತಿದೆ...",
+    "enterOTPField": "OTP ನಮೂದಿಸಿ",
+    "otpSentTo": "{{phone}} ಗೆ OTP ಕಳುಹಿಸಲಾಗಿದೆ",
+    "verifyOTP": "OTP ಪರಿಶೀಲಿಸಿ",
+    "verifying": "ಪರಿಶೀಲಿಸುತ್ತಿದೆ...",
+    "resendOTP": "OTP ಮತ್ತೆ ಕಳುಹಿಸಿ",
+    "resendOTPIn": "{{count}} ಸೆಕೆಂಡುಗಳಲ್ಲಿ OTP ಮತ್ತೆ ಕಳುಹಿಸಿ",
+    "fullName": "ಪೂರ್ಣ ಹೆಸರು",
+    "fullNamePlaceholder": "ನಿಮ್ಮ ಪೂರ್ಣ ಹೆಸರನ್ನು ನಮೂದಿಸಿ",
+    "dateOfBirth": "ಜನ್ಮ ದಿನಾಂಕ (ಐಚ್ಛಿಕ)",
+    "gender": "ಲಿಂಗ (ಐಚ್ಛಿಕ)",
+    "selectGender": "ಲಿಂಗವನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+    "male": "ಪುರುಷ",
+    "female": "ಹೆಂಗಸು",
+    "other": "ಇತರ",
+    "preferNotToSay": "ಹೇಳಲು ಬಯಸುವುದಿಲ್ಲ",
+    "completeRegistrationButton": "ನೋಂದಣಿಯನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ",
+    "registering": "ನೋಂದಣಿ ಮಾಡುತ್ತಿದೆ...",
+    "validPhoneRequired": "ದಯವಿಟ್ಟು ಮಾನ್ಯ ಮೊಬೈಲ್ ನಂಬರ್ ನಮೂದಿಸಿ",
+    "validOTPRequired": "ದಯವಿಟ್ಟು ಮಾನ್ಯ 6-ಅಂಕಿಯ OTP ನಮೂದಿಸಿ",
+    "nameRequired": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಹೆಸರನ್ನು ನಮೂದಿಸಿ",
+    "otpSentSuccess": "OTP ಯಶಸ್ವಿಯಾಗಿ ಕಳುಹಿಸಲಾಗಿದೆ!",
+    "loginSuccess": "ಲಾಗಿನ್ ಯಶಸ್ವಿ!",
+    "registrationSuccess": "ನೋಂದಣಿ ಯಶಸ್ವಿ!",
+    "completeRegistrationPrompt": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ನೋಂದಣಿಯನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ",
+    "invalidOTP": "ಅಮಾನ್ಯ OTP",
+    "registrationFailed": "ನೋಂದಣಿ ವಿಫಲವಾಗಿದೆ",
+    "waitBeforeResend": "ಮತ್ತೆ ಕಳುಹಿಸುವ ಮೊದಲು {{count}} ಸೆಕೆಂಡುಗಳು ನಿರೀಕ್ಷಿಸಿ",
+    "resendSuccess": "OTP ಯಶಸ್ವಿಯಾಗಿ ಮತ್ತೆ ಕಳುಹಿಸಲಾಗಿದೆ!",
+    "resendFailed": "OTP ಮತ್ತೆ ಕಳುಹಿಸಲು ವಿಫಲವಾಗಿದೆ",
+    "sendOTPFailed": "OTP ಕಳುಹಿಸಲು ವಿಫಲವಾಗಿದೆ"
+  },
+  "help": {
+    "title": "ಸಹಾಯ ಮತ್ತು ಬೆಂಬಲ",
+    "subtitle": "ನಿಮಗೆ ಸಹಾಯ ಮಾಡಲು ನಾವು ಇಲ್ಲಿದ್ದೇವೆ",
+    "callUs": "ನಮಗೆ ಕರೆ ಮಾಡಿ",
+    "email": "ಇಮೇಲ್",
+    "voiceGuidedHelp": "ಧ್ವನಿ-ಮಾರ್ಗದರ್ಶಿತ ಸಹಾಯ",
+    "voiceGuidedDesc": "ನಿಮ್ಮ ಭಾಷೆಯಲ್ಲಿ ತತ್ಕ್ಷಣದ ಸಹಾಯ ಪಡೆಯಿರಿ",
+    "start": "ಪ್ರಾರಂಭಿಸಿ",
+    "faq": "ಸಾಮಾನ್ಯವಾಗಿ ಕೇಳಲಾಗುವ ಪ್ರಶ್ನೆಗಳು",
+    "liveChatSupport": "ಲೈವ್ ಚಾಟ್ ಬೆಂಬಲ",
+    "liveChatDesc": "ತತ್ಕ್ಷಣದ ಸಹಾಯಕ್ಕಾಗಿ ನಮ್ಮ ಬೆಂಬಲ ತಂಡದೊಂದಿಗೆ ಚಾಟ್ ಮಾಡಿ",
+    "startChat": "ಚಾಟ್ ಪ್ರಾರಂಭಿಸಿ",
+    "appName": "ಸ್ವಸ್ಥ್ಯ ವಾಣಿ",
+    "version": "ಸಂಸ್ಕರಣೆ 1.0.0",
+    "trustedCompanion": "ನಿಮ್ಮ ನಂಬಲರ್ಹ ಆರೋಗ್ಯ ಸಹಚರ",
+    "faq1Q": "ನಾನು ಮದ್ದುಗಳನ್ನು ಹೇಗೆ ಹುಡುಕಬಹುದು?",
+    "faq1A": "ನೀವು ಹೋಮ್ ಸ್ಕ್ರೀನ್ನಲ್ಲಿರುವ ಹುಡುಕಾಟ ಬಾರ್ ಬಳಸಿ ಮದ್ದುಗಳನ್ನು ಹುಡುಕಬಹುದು. ನೀವು ಹೆಸರನ್ನು ಟೈಪ್ ಮಾಡಬಹುದು, ಕ್ಯಾಮೆರಾ ಬಳಸಿ ಪ್ರಿಸ್ಕ್ರಿಪ್ಷನ್ ಸ್ಕ್ಯಾನ್ ಮಾಡಬಹುದು ಅಥವಾ ಧ್ವನಿ ಇನ್ಪುಟ್ ಬಳಸಬಹುದು.",
+    "faq2Q": "ಲಕ್ಷಣ ಶಿಫಾರಸುಗಳು ನಿಖರವಾಗಿವೆಯೇ?",
+    "faq2A": "ನಮ್ಮ ಲಕ್ಷಣ ಪರಿಶೀಲಕವು ಸಾಮಾನ್ಯ ಲಕ್ಷಣಗಳ ಆಧಾರದ ಮೇಲೆ ಸಾಮಾನ್ಯ ಶಿಫಾರಸುಗಳನ್ನು ಒದಗಿಸುತ್ತದೆ. ಸರಿಯಾದ ನಿದಾನ ಮತ್ತು ಚಿಕಿತ್ಸೆಗಾಗಿ ಯಾವಾಗಲೂ ಆರೋಗ್ಯ ವೃತ್ತಿಪರರನ್ನು ಸಂಪ್ರದಿಸಿ.",
+    "faq3Q": "ನಾನು ಮದ್ದು ನೆನಪುಗಳನ್ನು ಹೇಗೆ ಸೆಟ್ ಮಾಡಬಹುದು?",
+    "faq3A": "ನೆನಪುಗಳ ಟ್ಯಾಬ್‌ಗೆ ಹೋಗಿ 'ಹೊಸ ನೆನಪು ಸೇರಿಸಿ' ಕ್ಲಿಕ್ ಮಾಡಿ. ಮದ್ದನ್ನು ಎಂದಿಗೂ ಮರೆಯಬಾರದು ಎಂಬುದಕ್ಕಾಗಿ ಮದ್ದಿನ ಹೆಸರು, ಸಮಯ ಮತ್ತು ಆವರ್ತನವನ್ನು ನಮೂದಿಸಿ.",
+    "faq4Q": "ನನ್ನ ಆರೋಗ್ಯ ಡೇಟಾ ಸುರಕ್ಷಿತವೇ?",
+    "faq4A": "ಹೌದು, ನಿಮ್ಮ ಎಲ್ಲಾ ಆರೋಗ್ಯ ಡೇಟಾವನ್ನು ಎನ್ಕ್ರಿಪ್ಟ್ ಮಾಡಲಾಗಿದೆ ಮತ್ತು ನಿಮ್ಮ ಸಾಧನದಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿ ಸಂಗ್ರಹಿಸಲಾಗಿದೆ. ನಾವು ನಿಮ್ಮ ಗೌಪ್ಯತೆ ಮತ್ತು ಸುರಕ್ಷತೆಯನ್ನು ಆದ್ಯತೆ ನೀಡುತ್ತೇವೆ.",
+    "faq5Q": "ಯಾವ ಭಾಷೆಗಳು ಬೆಂಬಲಿಸಲ್ಪಡುತ್ತವೆ?",
+    "faq5A": "ಅಪ್ಲಿಕೇಶನ್ ಇಂಗ್ಲೀಷ್, ಹಿಂದಿ, ತಮಿಳು, ತೆಲುಗು, ಬಂಗಾಳಿ, ಮರಾಠಿ, ಗುಜರಾತಿ ಮತ್ತು ಕನ್ನಡವನ್ನು ಬೆಂಬಲಿಸುತ್ತದೆ. ನಿಮ್ಮ ಪ್ರೊಫೈಲ್ ಸೆಟ್ಟಿಂಗ್ಗಳಿಂದ ನೀವು ಭಾಷೆಯನ್ನು ಬದಲಾಯಿಸಬಹುದು.",
+    "callingSupport": "ಬೆಂಬಲವನ್ನು ಕರೆ ಮಾಡುತ್ತಿದೆ...",
+    "openingEmail": "ಇಮೇಲ್ ತೆರೆಯುತ್ತಿದೆ...",
+    "voiceHelpComingSoon": "ಧ್ವನಿ ಸಹಾಯ ಶೀಘ್ರದಲ್ಲೇ ಬರುತ್ತಿದೆ!",
+    "chatSupportComingSoon": "ಚಾಟ್ ಬೆಂಬಲ ಶೀಘ್ರದಲ್ಲೇ ಬರುತ್ತಿದೆ!"
   },
   "languages": {
     "en": "English",
@@ -64,4 +218,3 @@
     "kn": "ಕನ್ನಡ (Kannada)"
   }
 }
-
