--- a/src/locales/mr/common.json
+++ b/src/locales/mr/common.json
@@ -16,7 +16,14 @@
     "close": "बंद करा",
     "back": "मागे",
     "next": "पुढे",
-    "done": "पूर्ण"
+    "done": "पूर्ण",
+    "skip": "वगळा",
+    "getStarted": "सुरू करा",
+    "languageChanged": "भाषा यशस्वीरित्या बदलली!",
+    "languageChangeError": "भाषा बदलू शकली नाही",
+    "loggedOut": "यशस्वीरित्या लॉग आउट झाले!",
+    "editComingSoon": "संपादन लवकरच येईल!",
+    "notSet": "सेट केलेले नाही"
   },
   "home": {
     "greeting": "नमस्कार, {{name}}!",
@@ -24,10 +31,18 @@
     "quickActions": "त्वरित क्रिया",
     "healthTips": "आजच्या आरोग्य टिप्स",
     "aiAssistant": "AI असिस्टंटशी बोला",
-    "aiAssistantDesc": "औषधे, लक्षणे किंवा आरोग्य सल्ल्याबद्दल तुमच्या भाषेत विचारा"
+    "aiAssistantDesc": "औषधे, लक्षणे किंवा आरोग्य सल्ल्याबद्दल तुमच्या भाषेत विचारा",
+    "healthTip1": "दररोज 8 ग्लास पाणी प्या",
+    "healthTip2": "डॉक्टरांनी सांगितले नसेल तर जेवणानंतर औषधे घ्या",
+    "healthTip3": "दररोज 30 मिनिटे व्यायाम करा",
+    "healthTip4": "7-8 तास झोप घ्या",
+    "symptomChecker": "लक्षण तपासणी",
+    "myMedicines": "माझी औषधे",
+    "trackHealth": "आरोग्य ट्रॅक करा"
   },
   "medicine": {
     "details": "औषध तपशील",
+    "detailedInfo": "या औषधाबद्दल तपशीलवार माहिती",
     "name": "नाव",
     "genericName": "सामान्य नाव",
     "category": "वर्ग",
@@ -45,13 +60,152 @@
   },
   "profile": {
     "title": "प्रोफाइल",
+    "managePreferences": "तुमच्या प्राधान्यांचे व्यवस्थापन करा",
+    "personalInfo": "वैयक्तिक माहिती",
+    "name": "नाव",
+    "email": "ईमेल",
+    "phoneNumber": "फोन नंबर",
     "preferences": "प्राधान्ये",
     "notifications": "सूचना",
     "medicationReminders": "औषध आठवण्या",
+    "getNotified": "तुमच्या डोससाठी सूचना मिळवा",
     "healthTips": "आरोग्य टिप्स",
+    "dailyAdvice": "दैनंदिन आरोग्य सल्ला",
     "language": "भाषा",
     "changeLanguage": "भाषा बदला",
-    "supports": "समर्थित: हिंदी, तमिळ, तेलुगू, बंगाली, मराठी, गुजराती, कन्नड"
+    "supports": "समर्थित: हिंदी, तमिळ, तेलुगू, बंगाली, मराठी, गुजराती, कन्नड",
+    "accessibility": "प्रवेशक्षमता सेटिंग्ज",
+    "darkMode": "डार्क मोड",
+    "easierOnEyes": "डोळ्यांना सोपे",
+    "largeText": "मोठा मजकूर",
+    "increaseFontSize": "फॉन्ट आकार वाढवा",
+    "highContrast": "उच्च कंट्रास्ट",
+    "betterVisibility": "चांगली दृश्यता",
+    "logOut": "लॉग आउट"
+  },
+  "symptoms": {
+    "title": "लक्षण तपासणी",
+    "subtitle": "औषध सुझाव मिळवण्यासाठी तुमची लक्षणे निवडा",
+    "selectedSymptoms": "निवडलेली लक्षणे",
+    "clearAll": "सर्व साफ करा",
+    "commonSymptoms": "सामान्य लक्षणे",
+    "checkSymptoms": "लक्षणे तपासा",
+    "selectAtLeastOne": "कृपया किमान एक लक्षण निवडा",
+    "disclaimer": "ही फक्त माहितीसाठी आहे. योग्य निदानासाठी डॉक्टरांशी सल्ला घ्या.",
+    "suggestedMedicines": "सुझावित औषधे",
+    "checkDifferentSymptoms": "भिन्न लक्षणे तपासा",
+    "headache": "डोकेदुखी",
+    "fever": "ताप",
+    "cough": "खोकला",
+    "cold": "सर्दी",
+    "bodyPain": "शरीर दुखी",
+    "nausea": "उलट्या",
+    "dizziness": "चक्कर",
+    "fatigue": "थकवा",
+    "soreThroat": "घसा दुखी",
+    "chestPain": "छाती दुखी"
+  },
+  "reminders": {
+    "title": "औषध आठवण्या",
+    "subtitle": "तुमचा डोस कधीही चुकवू नका",
+    "addNewReminder": "नवीन आठवण जोडा",
+    "todaysReminders": "आजच्या आठवण्या",
+    "noActiveReminders": "सक्रिय आठवण्या नाहीत",
+    "completedToday": "आज पूर्ण झाले",
+    "reminderUpdated": "आठवण अपडेट केली",
+    "reminderDeleted": "आठवण हटवली",
+    "addReminderComingSoon": "आठवण वैशिष्ट्य लवकरच येईल!",
+    "daily": "दैनंदिन",
+    "weekly": "साप्ताहिक",
+    "monthly": "मासिक"
+  },
+  "onboarding": {
+    "slide1Title": "AI असिस्टंटशी बोला",
+    "slide1Desc": "तुमच्या भाषेत नैसर्गिकरित्या बोला. AI चालित औषधे, लक्षणे आणि आरोग्य सल्ल्याबद्दल त्वरित उत्तरे मिळवा",
+    "slide2Title": "तुमची औषधे शोधा",
+    "slide2Desc": "नावाने औषधे शोधा, प्रिस्क्रिप्शन स्कॅन करा किंवा तुमच्या पसंतीच्या भाषेत आवाज इनपुट वापरा",
+    "slide3Title": "लक्षणे तपासा",
+    "slide3Desc": "AI चालित शिफारसींसह तुमच्या लक्षणांच्या आधारावर त्वरित औषध शिफारसी मिळवा",
+    "slide4Title": "डोस कधीही चुकवू नका",
+    "slide4Desc": "तुमच्या औषधांसाठी स्मार्ट आठवण्या सेट करा आणि तुमच्या आरोग्य प्रवासाचा मागोवा घ्या",
+    "slide5Title": "तुमचे आरोग्य, सुरक्षित",
+    "slide5Desc": "तुमचा सर्व आरोग्य डेटा एनक्रिप्ट केलेला आहे आणि तुमच्या डिव्हाइसवर सुरक्षितपणे संग्रहित केला आहे"
+  },
+  "navigation": {
+    "home": "होम",
+    "symptoms": "लक्षणे",
+    "reminders": "आठवण्या",
+    "profile": "प्रोफाइल",
+    "help": "मदत"
+  },
+  "login": {
+    "mobileLogin": "मोबाइल लॉगिन",
+    "enterPhone": "सुरू करण्यासाठी तुमचा मोबाइल नंबर प्रविष्ट करा",
+    "enterOTP": "तुमच्या मोबाइलवर पाठवलेला OTP प्रविष्ट करा",
+    "completeRegistration": "तुमची नोंदणी पूर्ण करा",
+    "mobileNumber": "मोबाइल नंबर",
+    "sendOTP": "OTP पाठवा",
+    "sending": "पाठवत आहे...",
+    "enterOTPField": "OTP प्रविष्ट करा",
+    "otpSentTo": "{{phone}} ला OTP पाठवला",
+    "verifyOTP": "OTP सत्यापित करा",
+    "verifying": "सत्यापित करत आहे...",
+    "resendOTP": "OTP पुन्हा पाठवा",
+    "resendOTPIn": "{{count}} सेकंदात OTP पुन्हा पाठवा",
+    "fullName": "पूर्ण नाव",
+    "fullNamePlaceholder": "तुमचे पूर्ण नाव प्रविष्ट करा",
+    "dateOfBirth": "जन्म तारीख (पर्यायी)",
+    "gender": "लिंग (पर्यायी)",
+    "selectGender": "लिंग निवडा",
+    "male": "पुरुष",
+    "female": "स्त्री",
+    "other": "इतर",
+    "preferNotToSay": "सांगू इच्छित नाही",
+    "completeRegistrationButton": "नोंदणी पूर्ण करा",
+    "registering": "नोंदणी करत आहे...",
+    "validPhoneRequired": "कृपया वैध मोबाइल नंबर प्रविष्ट करा",
+    "validOTPRequired": "कृपया वैध 6-अंकी OTP प्रविष्ट करा",
+    "nameRequired": "कृपया तुमचे नाव प्रविष्ट करा",
+    "otpSentSuccess": "OTP यशस्वीरित्या पाठवला!",
+    "loginSuccess": "लॉगिन यशस्वी!",
+    "registrationSuccess": "नोंदणी यशस्वी!",
+    "completeRegistrationPrompt": "कृपया तुमची नोंदणी पूर्ण करा",
+    "invalidOTP": "अवैध OTP",
+    "registrationFailed": "नोंदणी अयशस्वी",
+    "waitBeforeResend": "पुन्हा पाठवण्यापूर्वी कृपया {{count}} सेकंद प्रतीक्षा करा",
+    "resendSuccess": "OTP यशस्वीरित्या पुन्हा पाठवला!",
+    "resendFailed": "OTP पुन्हा पाठवण्यात अयशस्वी",
+    "sendOTPFailed": "OTP पाठवण्यात अयशस्वी"
+  },
+  "help": {
+    "title": "मदत आणि समर्थन",
+    "subtitle": "तुम्हाला मदत करण्यासाठी आम्ही येथे आहोत",
+    "callUs": "आम्हाला कॉल करा",
+    "email": "ईमेल",
+    "voiceGuidedHelp": "आवाज-मार्गदर्शित मदत",
+    "voiceGuidedDesc": "तुमच्या भाषेत त्वरित मदत मिळवा",
+    "start": "सुरू करा",
+    "faq": "नेहमी विचारले जाणारे प्रश्न",
+    "liveChatSupport": "लाइव्ह चॅट समर्थन",
+    "liveChatDesc": "त्वरित सहाय्यासाठी आमच्या समर्थन टीमशी चॅट करा",
+    "startChat": "चॅट सुरू करा",
+    "appName": "स्वस्थ्य वाणी",
+    "version": "आवृत्ती 1.0.0",
+    "trustedCompanion": "तुमचा विश्वासार्ह आरोग्य साथी",
+    "faq1Q": "मी औषधे कशी शोधू शकतो?",
+    "faq1A": "तुम्ही होम स्क्रीनवर शोध बार वापरून औषधे शोधू शकता. तुम्ही नाव टाइप करू शकता, कॅमेरा वापरून प्रिस्क्रिप्शन स्कॅन करू शकता किंवा आवाज इनपुट वापरू शकता.",
+    "faq2Q": "लक्षण सुझाव अचूक आहेत का?",
+    "faq2A": "आमचा लक्षण चेकर सामान्य लक्षणांच्या आधारावर सामान्य सुझाव देतो. योग्य निदान आणि उपचारासाठी नेहमी आरोग्य व्यावसायिकांचा सल्ला घ्या.",
+    "faq3Q": "मी औषध आठवण्या कशी सेट करू शकतो?",
+    "faq3A": "आठवण्या टॅबवर जा आणि 'नवीन आठवण जोडा' वर टॅप करा. डोस कधीही चुकवू नये म्हणून औषधाचे नाव, वेळ आणि वारंवारता प्रविष्ट करा.",
+    "faq4Q": "माझा आरोग्य डेटा सुरक्षित आहे का?",
+    "faq4A": "होय, तुमचा सर्व आरोग्य डेटा एनक्रिप्ट केलेला आहे आणि तुमच्या डिव्हाइसवर सुरक्षितपणे संग्रहित केला आहे. आम्ही तुमच्या गोपनीयता आणि सुरक्षेला प्राधान्य देतो.",
+    "faq5Q": "कोणत्या भाषा समर्थित आहेत?",
+    "faq5A": "ॲप इंग्रजी, हिंदी, तमिळ, तेलुगू, बंगाली, मराठी, गुजराती आणि कन्नड समर्थन करते. तुम्ही तुमच्या प्रोफाइल सेटिंग्जमधून भाषा बदलू शकता.",
+    "callingSupport": "समर्थन कॉल करत आहे...",
+    "openingEmail": "ईमेल उघडत आहे...",
+    "voiceHelpComingSoon": "आवाज मदत लवकरच येईल!",
+    "chatSupportComingSoon": "चॅट समर्थन लवकरच येईल!"
   },
   "languages": {
     "en": "English",
@@ -64,4 +218,3 @@
     "kn": "ಕನ್ನಡ (Kannada)"
   }
 }
-
