--- a/src/locales/ta/common.json
+++ b/src/locales/ta/common.json
@@ -16,7 +16,14 @@
     "close": "மூடு",
     "back": "பின்",
     "next": "அடுத்து",
-    "done": "முடிந்தது"
+    "done": "முடிந்தது",
+    "skip": "தவிர்க்க",
+    "getStarted": "தொடங்க",
+    "languageChanged": "மொழி வெற்றிகரமாக மாற்றப்பட்டது!",
+    "languageChangeError": "மொழியை மாற்ற முடியவில்லை",
+    "loggedOut": "வெற்றிகரமாக வெளியேறியது!",
+    "editComingSoon": "திருத்தம் விரைவில் வருகிறது!",
+    "notSet": "அமைக்கப்படவில்லை"
   },
   "home": {
     "greeting": "வணக்கம், {{name}}!",
@@ -24,10 +31,18 @@
     "quickActions": "விரைவான செயல்கள்",
     "healthTips": "இன்றைய சுகாதார குறிப்புகள்",
     "aiAssistant": "AI உதவியாளருடன் பேசுங்கள்",
-    "aiAssistantDesc": "மருந்துகள், அறிகுறிகள் அல்லது சுகாதார ஆலோசனை பற்றி உங்கள் மொழியில் கேளுங்கள்"
+    "aiAssistantDesc": "மருந்துகள், அறிகுறிகள் அல்லது சுகாதார ஆலோசனை பற்றி உங்கள் மொழியில் கேளுங்கள்",
+    "healthTip1": "தினமும் 8 கண்ணாடி தண்ணீர் குடியுங்கள்",
+    "healthTip2": "மருத்துவரால் பரிந்துரைக்கப்படாத வரை உணவுக்குப் பிறகு மருந்துகளை எடுத்துக் கொள்ளுங்கள்",
+    "healthTip3": "தினமும் 30 நிமிடங்கள் உடற்பயிற்சி செய்யுங்கள்",
+    "healthTip4": "7-8 மணிநேரம் தூங்குங்கள்",
+    "symptomChecker": "அறிகுறி சோதனை",
+    "myMedicines": "எனது மருந்துகள்",
+    "trackHealth": "சுகாதாரத்தை கண்காணி"
   },
   "medicine": {
     "details": "மருந்து விவரங்கள்",
+    "detailedInfo": "இந்த மருந்தைப் பற்றிய விரிவான தகவல்",
     "name": "பெயர்",
     "genericName": "பொதுவான பெயர்",
     "category": "வகை",
@@ -45,13 +60,152 @@
   },
   "profile": {
     "title": "சுயவிவரம்",
+    "managePreferences": "உங்கள் விருப்பத்தேர்வுகளை நிர்வகிக்கவும்",
+    "personalInfo": "தனிப்பட்ட தகவல்",
+    "name": "பெயர்",
+    "email": "மின்னஞ்சல்",
+    "phoneNumber": "தொலைபேசி எண்",
     "preferences": "விருப்பத்தேர்வுகள்",
     "notifications": "அறிவிப்புகள்",
     "medicationReminders": "மருந்து நினைவூட்டல்கள்",
+    "getNotified": "உங்கள் மருந்தளவுகளுக்கு அறிவிக்கப்படுவீர்கள்",
     "healthTips": "சுகாதார குறிப்புகள்",
+    "dailyAdvice": "தினசரி நல்வாழ்வு ஆலோசனை",
     "language": "மொழி",
     "changeLanguage": "மொழியை மாற்று",
-    "supports": "ஆதரிக்கப்பட்டவை: ஹிந்தி, தமிழ், தெலுங்கு, வங்காளி, மராத்தி, குஜராத்தி, கன்னடம்"
+    "supports": "ஆதரிக்கப்பட்டவை: ஹிந்தி, தமிழ், தெலுங்கு, வங்காளி, மராத்தி, குஜராத்தி, கன்னடம்",
+    "accessibility": "அணுகல் அமைப்புகள்",
+    "darkMode": "இருண்ட முறை",
+    "easierOnEyes": "கண்களுக்கு எளிதானது",
+    "largeText": "பெரிய உரை",
+    "increaseFontSize": "எழுத்து அளவை அதிகரிக்கவும்",
+    "highContrast": "அதிக கontrast",
+    "betterVisibility": "சிறந்த பார்வை",
+    "logOut": "வெளியேறு"
+  },
+  "symptoms": {
+    "title": "அறிகுறி சோதனை",
+    "subtitle": "மருந்து பரிந்துரைகளைப் பெற உங்கள் அறிகுறிகளைத் தேர்ந்தெடுக்கவும்",
+    "selectedSymptoms": "தேர்ந்தெடுக்கப்பட்ட அறிகுறிகள்",
+    "clearAll": "அனைத்தையும் அழிக்க",
+    "commonSymptoms": "பொதுவான அறிகுறிகள்",
+    "checkSymptoms": "அறிகுறிகளைச் சரிபார்க்கவும்",
+    "selectAtLeastOne": "தயவுசெய்து குறைந்தது ஒரு அறிகுறியைத் தேர்ந்தெடுக்கவும்",
+    "disclaimer": "இது தகவல் மட்டுமே. சரியான நோய் கண்டறிதலுக்கு மருத்துவரிடம் ஆலோசனை பெறவும்.",
+    "suggestedMedicines": "பரிந்துரைக்கப்பட்ட மருந்துகள்",
+    "checkDifferentSymptoms": "வெவ்வேறு அறிகுறிகளைச் சரிபார்க்கவும்",
+    "headache": "தலைவலி",
+    "fever": "காய்ச்சல்",
+    "cough": "இருமல்",
+    "cold": "குளிர்",
+    "bodyPain": "உடல் வலி",
+    "nausea": "குமட்டல்",
+    "dizziness": "தலைச்சுற்றல்",
+    "fatigue": "சோர்வு",
+    "soreThroat": "தொண்டை வலி",
+    "chestPain": "மார்பு வலி"
+  },
+  "reminders": {
+    "title": "மருந்து நினைவூட்டல்கள்",
+    "subtitle": "உங்கள் மருந்தளவை ஒருபோதும் தவறவிடாதீர்கள்",
+    "addNewReminder": "புதிய நினைவூட்டலைச் சேர்க்கவும்",
+    "todaysReminders": "இன்றைய நினைவூட்டல்கள்",
+    "noActiveReminders": "செயலில் உள்ள நினைவூட்டல்கள் இல்லை",
+    "completedToday": "இன்று முடிக்கப்பட்டது",
+    "reminderUpdated": "நினைவூட்டல் புதுப்பிக்கப்பட்டது",
+    "reminderDeleted": "நினைவூட்டல் நீக்கப்பட்டது",
+    "addReminderComingSoon": "நினைவூட்டல் அம்சம் விரைவில் வருகிறது!",
+    "daily": "தினசரி",
+    "weekly": "வாராந்திர",
+    "monthly": "மாதந்தோறும்"
+  },
+  "onboarding": {
+    "slide1Title": "AI உதவியாளருடன் பேசுங்கள்",
+    "slide1Desc": "உங்கள் மொழியில் இயற்கையாக பேசுங்கள்। AI இயக்கப்படும் மருந்துகள், அறிகுறிகள் மற்றும் சுகாதார ஆலோசனை பற்றி உடனடி பதில்களைப் பெறுங்கள்",
+    "slide2Title": "உங்கள் மருந்துகளைக் கண்டறியவும்",
+    "slide2Desc": "பெயரால் மருந்துகளைத் தேடுங்கள், மருந்து மனுக்களை ஸ்கேன் செய்யுங்கள் அல்லது உங்கள் விரும்பிய மொழியில் குரல் உள்ளீட்டைப் பயன்படுத்துங்கள்",
+    "slide3Title": "அறிகுறிகளைச் சரிபார்க்கவும்",
+    "slide3Desc": "AI-இயக்கப்பட்ட பரிந்துரைகளுடன் உங்கள் அறிகுறிகளின் அடிப்படையில் உடனடி மருந்து பரிந்துரைகளைப் பெறுங்கள்",
+    "slide4Title": "ஒருபோதும் மருந்தளவைத் தவறவிடாதீர்கள்",
+    "slide4Desc": "உங்கள் மருந்துகளுக்கு புத்திசாலித்தனமான நினைவூட்டல்களை அமைத்து உங்கள் சுகாதார பயணத்தை கண்காணிக்கவும்",
+    "slide5Title": "உங்கள் சுகாதாரம், பாதுகாக்கப்பட்டது",
+    "slide5Desc": "உங்கள் அனைத்து சுகாதார தரவும் குறியாக்கம் செய்யப்பட்டு உங்கள் சாதனத்தில் பாதுகாப்பாக சேமிக்கப்படுகிறது"
+  },
+  "navigation": {
+    "home": "வீடு",
+    "symptoms": "அறிகுறிகள்",
+    "reminders": "நினைவூட்டல்கள்",
+    "profile": "சுயவிவரம்",
+    "help": "உதவி"
+  },
+  "login": {
+    "mobileLogin": "மொபைல் உள்நுழைவு",
+    "enterPhone": "தொடங்க உங்கள் மொபைல் எண்ணை உள்ளிடவும்",
+    "enterOTP": "உங்கள் மொபைலில் அனுப்பப்பட்ட OTP ஐ உள்ளிடவும்",
+    "completeRegistration": "உங்கள் பதிவை முடிக்கவும்",
+    "mobileNumber": "மொபைல் எண்",
+    "sendOTP": "OTP அனுப்பவும்",
+    "sending": "அனுப்புகிறது...",
+    "enterOTPField": "OTP உள்ளிடவும்",
+    "otpSentTo": "{{phone}} க்கு OTP அனுப்பப்பட்டது",
+    "verifyOTP": "OTP சரிபார்க்கவும்",
+    "verifying": "சரிபார்க்கிறது...",
+    "resendOTP": "OTP மீண்டும் அனுப்பவும்",
+    "resendOTPIn": "{{count}} வினாடிகளில் OTP மீண்டும் அனுப்பவும்",
+    "fullName": "முழு பெயர்",
+    "fullNamePlaceholder": "உங்கள் முழு பெயரை உள்ளிடவும்",
+    "dateOfBirth": "பிறந்த தேதி (விருப்பமானது)",
+    "gender": "பாலினம் (விருப்பமானது)",
+    "selectGender": "பாலினத்தைத் தேர்ந்தெடுக்கவும்",
+    "male": "ஆண்",
+    "female": "பெண்",
+    "other": "மற்றவை",
+    "preferNotToSay": "சொல்ல விரும்பவில்லை",
+    "completeRegistrationButton": "பதிவை முடிக்கவும்",
+    "registering": "பதிவு செய்கிறது...",
+    "validPhoneRequired": "தயவுசெய்து சரியான தொலைபேசி எண்ணை உள்ளிடவும்",
+    "validOTPRequired": "தயவுசெய்து சரியான 6-இலக்க OTP ஐ உள்ளிடவும்",
+    "nameRequired": "தயவுசெய்து உங்கள் பெயரை உள்ளிடவும்",
+    "otpSentSuccess": "OTP வெற்றிகரமாக அனுப்பப்பட்டது!",
+    "loginSuccess": "உள்நுழைவு வெற்றிகரமானது!",
+    "registrationSuccess": "பதிவு வெற்றிகரமானது!",
+    "completeRegistrationPrompt": "தயவுசெய்து உங்கள் பதிவை முடிக்கவும்",
+    "invalidOTP": "தவறான OTP",
+    "registrationFailed": "பதிவு தோல்வியடைந்தது",
+    "waitBeforeResend": "மீண்டும் அனுப்புவதற்கு முன் {{count}} வினாடிகள் காத்திருங்கள்",
+    "resendSuccess": "OTP வெற்றிகரமாக மீண்டும் அனுப்பப்பட்டது!",
+    "resendFailed": "OTP மீண்டும் அனுப்புவதில் தோல்வி",
+    "sendOTPFailed": "OTP அனுப்புவதில் தோல்வி"
+  },
+  "help": {
+    "title": "உதவி மற்றும் ஆதரவு",
+    "subtitle": "உங்களுக்கு உதவ நாங்கள் இங்கே இருக்கிறோம்",
+    "callUs": "எங்களை அழைக்கவும்",
+    "email": "மின்னஞ்சல்",
+    "voiceGuidedHelp": "குரல்-வழிகாட்டப்பட்ட உதவி",
+    "voiceGuidedDesc": "உங்கள் மொழியில் உடனடி உதவியைப் பெறுங்கள்",
+    "start": "தொடங்க",
+    "faq": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
+    "liveChatSupport": "நேரடி சாட் ஆதரவு",
+    "liveChatDesc": "உடனடி உதவிக்கு எங்கள் ஆதரவு குழுவுடன் அரட்டையடிக்கவும்",
+    "startChat": "அரட்டை தொடங்கவும்",
+    "appName": "ஸ்வஸ்த்ய வாணி",
+    "version": "பதிப்பு 1.0.0",
+    "trustedCompanion": "உங்கள் நம்பகமான சுகாதார துணை",
+    "faq1Q": "மருந்துகளை எப்படி தேடுவது?",
+    "faq1A": "வீட்டுத் திரையில் உள்ள தேடல் பட்டியைப் பயன்படுத்தி மருந்துகளைத் தேடலாம். நீங்கள் பெயரைத் தட்டலாம், கேமராவைப் பயன்படுத்தி மருந்து மனுவை ஸ்கேன் செய்யலாம் அல்லது குரல் உள்ளீட்டைப் பயன்படுத்தலாம்.",
+    "faq2Q": "அறிகுறி பரிந்துரைகள் துல்லியமானவையா?",
+    "faq2A": "எங்கள் அறிகுறி சோதனை பொதுவான அறிகுறிகளின் அடிப்படையில் பொதுவான பரிந்துரைகளை வழங்குகிறது. சரியான நோய் கண்டறிதல் மற்றும் சிகிச்சைக்கு எப்போதும் சுகாதார நிபுணரிடம் ஆலோசனை பெறவும்.",
+    "faq3Q": "மருந்து நினைவூட்டல்களை எப்படி அமைப்பது?",
+    "faq3A": "நினைவூட்டல்கள் தாவலுக்குச் சென்று 'புதிய நினைவூட்டலைச் சேர்' என்பதைத் தட்டவும். மருந்தளவை ஒருபோதும் தவறவிடாதீர்கள் என்பதற்காக மருந்தின் பெயர், நேரம் மற்றும் அதிர்வெண்ணை உள்ளிடவும்.",
+    "faq4Q": "எனது சுகாதார தரவு பாதுகாப்பானதா?",
+    "faq4A": "ஆம், உங்கள் அனைத்து சுகாதார தரவும் குறியாக்கம் செய்யப்பட்டு உங்கள் சாதனத்தில் பாதுகாப்பாக சேமிக்கப்படுகிறது. நாங்கள் உங்கள் தனியுரிமை மற்றும் பாதுகாப்பை முன்னுரிமையாகக் கொள்கிறோம்.",
+    "faq5Q": "எந்த மொழிகள் ஆதரிக்கப்படுகின்றன?",
+    "faq5A": "பயன்பாடு ஆங்கிலம், ஹிந்தி, தமிழ், தெலுங்கு, வங்காளி, மராத்தி, குஜராத்தி மற்றும் கன்னடம் ஆகியவற்றை ஆதரிக்கிறது. உங்கள் சுயவிவர அமைப்புகளிலிருந்து மொழியை மாற்றலாம்.",
+    "callingSupport": "ஆதரவை அழைக்கிறது...",
+    "openingEmail": "மின்னஞ்சலைத் திறக்கிறது...",
+    "voiceHelpComingSoon": "குரல் உதவி விரைவில் வருகிறது!",
+    "chatSupportComingSoon": "சாட் ஆதரவு விரைவில் வருகிறது!"
   },
   "languages": {
     "en": "English",
@@ -64,4 +218,3 @@
     "kn": "ಕನ್ನಡ (Kannada)"
   }
 }
-
