--- a/src/locales/te/common.json
+++ b/src/locales/te/common.json
@@ -16,7 +16,14 @@
     "close": "మూసివేయండి",
     "back": "వెనక్కి",
     "next": "తరువాత",
-    "done": "పూర్తయింది"
+    "done": "పూర్తయింది",
+    "skip": "వదిలివేయి",
+    "getStarted": "ప్రారంభించండి",
+    "languageChanged": "భాష విజయవంతంగా మార్చబడింది!",
+    "languageChangeError": "భాషను మార్చలేకపోయింది",
+    "loggedOut": "విజయవంతంగా లాగ్ అవుట్ చేయబడింది!",
+    "editComingSoon": "సవరణ త్వరలో రాబోతోంది!",
+    "notSet": "సెట్ చేయబడలేదు"
   },
   "home": {
     "greeting": "నమస్కారం, {{name}}!",
@@ -24,10 +31,18 @@
     "quickActions": "త్వరిత చర్యలు",
     "healthTips": "నేటి ఆరోగ్య చిట్కాలు",
     "aiAssistant": "AI అసిస్టెంట్ తో మాట్లాడండి",
-    "aiAssistantDesc": "మందులు, లక్షణాలు లేదా ఆరోగ్య సలహా గురించి మీ భాషలో అడగండి"
+    "aiAssistantDesc": "మందులు, లక్షణాలు లేదా ఆరోగ్య సలహా గురించి మీ భాషలో అడగండి",
+    "healthTip1": "రోజుకు 8 గ్లాస్ల నీరు త్రాగండి",
+    "healthTip2": "డాక్టరు సూచించినది కాకపోతే భోజనం తర్వాత మందులు తీసుకోండి",
+    "healthTip3": "రోజుకు 30 నిమిషాల వ్యాయామం చేయండి",
+    "healthTip4": "7-8 గంటల నిద్ర పడండి",
+    "symptomChecker": "లక్షణ సరిచూడుట",
+    "myMedicines": "నా మందులు",
+    "trackHealth": "ఆరోగ్యాన్ని ట్రాక్ చేయండి"
   },
   "medicine": {
     "details": "మందు వివరాలు",
+    "detailedInfo": "ఈ మందు గురించి వివరణాత్మక సమాచారం",
     "name": "పేరు",
     "genericName": "సాధారణ పేరు",
     "category": "వర్గం",
@@ -37,7 +52,7 @@
     "adults": "పెద్దలు",
     "children": "పిల్లలు",
     "sideEffects": "పార్శ్వ ప్రభావాలు",
-    "contraindications": "విరుద్ధ స్థితులు",
+    "contraindications": "విరోధాభాస స్థితులు",
     "warnings": "హెచ్చరికలు",
     "precautions": "జాగ్రత్తలు",
     "storage": "స్టోరేజ్ సూచనలు",
@@ -45,13 +60,152 @@
   },
   "profile": {
     "title": "ప్రొఫైల్",
+    "managePreferences": "మీ ప్రాధాన్యతలను నిర్వహించండి",
+    "personalInfo": "వ్యక్తిగత సమాచారం",
+    "name": "పేరు",
+    "email": "ఇమెయిల్",
+    "phoneNumber": "ఫోన్ నంబర్",
     "preferences": "ప్రాధాన్యతలు",
     "notifications": "నోటిఫికేషన్లు",
     "medicationReminders": "మందు జ్ఞాపకాలు",
+    "getNotified": "మీ మోతాదులకు తెలియజేయబడుతుంది",
     "healthTips": "ఆరోగ్య చిట్కాలు",
+    "dailyAdvice": "రోజువారీ ఆరోగ్య సలహా",
     "language": "భాష",
     "changeLanguage": "భాష మార్చండి",
-    "supports": "మద్దతు: హిందీ, తమిళం, తెలుగు, బెంగాలీ, మరాఠీ, గుజరాతీ, కన్నడ"
+    "supports": "మద్దతు: హిందీ, తమిళం, తెలుగు, బెంగాలీ, మరాఠీ, గుజరాతీ, కన్నడ",
+    "accessibility": "అందుబాటు సెట్టింగులు",
+    "darkMode": "డార్క్ మోడ్",
+    "easierOnEyes": "కళ్ళకు సులభం",
+    "largeText": "పెద్ద టెక్స్ట్",
+    "increaseFontSize": "ఫాంట్ పరిమాణాన్ని పెంచండి",
+    "highContrast": "అధిక కంట్రాస్ట్",
+    "betterVisibility": "మంచి దృశ్యత",
+    "logOut": "లాగ్ అవుట్"
+  },
+  "symptoms": {
+    "title": "లక్షణ సరిచూడుట",
+    "subtitle": "మందు సిఫార్సులను పొందడానికి మీ లక్షణాలను ఎంచుకోండి",
+    "selectedSymptoms": "ఎంచుకున్న లక్షణాలు",
+    "clearAll": "అన్నీ తొలగించండి",
+    "commonSymptoms": "సాధారణ లక్షణాలు",
+    "checkSymptoms": "లక్షణాలను తనిఖీ చేయండి",
+    "selectAtLeastOne": "దయచేసి కనీసం ఒక లక్షణాన్ని ఎంచుకోండి",
+    "disclaimer": "ఇది సమాచారం మాత్రమే. సరైన నిర్ధారణకు వైద్యుడిని సంప్రదించండి.",
+    "suggestedMedicines": "సిఫార్సు చేసిన మందులు",
+    "checkDifferentSymptoms": "విభిన్న లక్షణాలను తనిఖీ చేయండి",
+    "headache": "తలనొప్పి",
+    "fever": "జ్వరం",
+    "cough": "దగ్గు",
+    "cold": "జలుబు",
+    "bodyPain": "శరీర నొప్పి",
+    "nausea": "వికారం",
+    "dizziness": "తలతిరగడం",
+    "fatigue": "అలసట",
+    "soreThroat": "గొంతు నొప్పి",
+    "chestPain": "ఛాతీ నొప్పి"
+  },
+  "reminders": {
+    "title": "మందు జ్ఞాపకాలు",
+    "subtitle": "మీ మోతాదును ఎప్పుడూ మరచిపోవద్దు",
+    "addNewReminder": "కొత్త జ్ఞాపకాన్ని జోడించండి",
+    "todaysReminders": "నేటి జ్ఞాపకాలు",
+    "noActiveReminders": "క్రియాశీల జ్ఞాపకాలు లేవు",
+    "completedToday": "నేడు పూర్తయింది",
+    "reminderUpdated": "జ్ఞాపకం నవీకరించబడింది",
+    "reminderDeleted": "జ్ఞాపకం తొలగించబడింది",
+    "addReminderComingSoon": "జ్ఞాపకం ఫీచర్ త్వరలో రాబోతోంది!",
+    "daily": "రోజువారీ",
+    "weekly": "వారానికి",
+    "monthly": "నెలవారీ"
+  },
+  "onboarding": {
+    "slide1Title": "AI అసిస్టెంట్ తో మాట్లాడండి",
+    "slide1Desc": "మీ భాషలో సహజంగా మాట్లాడండి. AI ద్వారా నడుపబడిన మందులు, లక్షణాలు మరియు ఆరోగ్య సలహా గురించి తక్షణ సమాధానాలను పొందండి",
+    "slide2Title": "మీ మందులను కనుగొనండి",
+    "slide2Desc": "పేరుతో మందులను శోధించండి, ప్రిస్క్రిప్షన్లను స్కాన్ చేయండి లేదా మీ ప్రాధాన్య భాషలో వాయిస్ ఇన్పుట్ ఉపయోగించండి",
+    "slide3Title": "లక్షణాలను తనిఖీ చేయండి",
+    "slide3Desc": "AI-నడుపబడిన సిఫార్సులతో మీ లక్షణాల ఆధారంగా తక్షణ మందు సిఫార్సులను పొందండి",
+    "slide4Title": "మోతాదును ఎప్పుడూ మరచిపోవద్దు",
+    "slide4Desc": "మీ మందులకు స్మార్ట్ జ్ఞాపకాలను సెట్ చేసి మీ ఆరోగ్య ప్రయాణాన్ని ట్రాక్ చేయండి",
+    "slide5Title": "మీ ఆరోగ్యం, భద్రత",
+    "slide5Desc": "మీ అన్ని ఆరోగ్య డేటా ఎన్క్రిప్ట్ చేయబడింది మరియు మీ పరికరంలో భద్రంగా నిల్వ చేయబడుతుంది"
+  },
+  "navigation": {
+    "home": "హోమ్",
+    "symptoms": "లక్షణాలు",
+    "reminders": "జ్ఞాపకాలు",
+    "profile": "ప్రొఫైల్",
+    "help": "సహాయం"
+  },
+  "login": {
+    "mobileLogin": "మొబైల్ లాగిన్",
+    "enterPhone": "ప్రారంభించడానికి మీ మొబైల్ నంబర్ నమోదు చేయండి",
+    "enterOTP": "మీ మొబైల్‌కు పంపిన OTP నమోదు చేయండి",
+    "completeRegistration": "మీ నమోదును పూర్తి చేయండి",
+    "mobileNumber": "మొబైల్ నంబర్",
+    "sendOTP": "OTP పంపండి",
+    "sending": "పంపుతోంది...",
+    "enterOTPField": "OTP నమోదు చేయండి",
+    "otpSentTo": "{{phone}} కు OTP పంపబడింది",
+    "verifyOTP": "OTP నిర్ధారించండి",
+    "verifying": "నిర్ధారిస్తోంది...",
+    "resendOTP": "OTP మళ్లీ పంపండి",
+    "resendOTPIn": "{{count}} సెకన్లలో OTP మళ్లీ పంపండి",
+    "fullName": "పూర్తి పేరు",
+    "fullNamePlaceholder": "మీ పూర్తి పేరును నమోదు చేయండి",
+    "dateOfBirth": "పుట్టిన తేదీ (ఐచ్ఛికం)",
+    "gender": "లింగం (ఐచ్ఛికం)",
+    "selectGender": "లింగాన్ని ఎంచుకోండి",
+    "male": "పురుషుడు",
+    "female": "స్త్రీ",
+    "other": "ఇతర",
+    "preferNotToSay": "చెప్పకూడదనుకుంటున్నాను",
+    "completeRegistrationButton": "నమోదును పూర్తి చేయండి",
+    "registering": "నమోదు చేస్తోంది...",
+    "validPhoneRequired": "దయచేసి చెల్లుబాటు అయ్యే మొబైల్ నంబర్ నమోదు చేయండి",
+    "validOTPRequired": "దయచేసి చెల్లుబాటు అయ్యే 6-అంకెల OTP నమోదు చేయండి",
+    "nameRequired": "దయచేసి మీ పేరును నమోదు చేయండి",
+    "otpSentSuccess": "OTP విజయవంతంగా పంపబడింది!",
+    "loginSuccess": "లాగిన్ విజయవంతమైంది!",
+    "registrationSuccess": "నమోదు విజయవంతమైంది!",
+    "completeRegistrationPrompt": "దయచేసి మీ నమోదును పూర్తి చేయండి",
+    "invalidOTP": "చెల్లని OTP",
+    "registrationFailed": "నమోదు విఫలమైంది",
+    "waitBeforeResend": "మళ్లీ పంపే ముందు {{count}} సెకన్లు వేచి ఉండండి",
+    "resendSuccess": "OTP విజయవంతంగా మళ్లీ పంపబడింది!",
+    "resendFailed": "OTP మళ్లీ పంపడంలో విఫలమైంది",
+    "sendOTPFailed": "OTP పంపడంలో విఫలమైంది"
+  },
+  "help": {
+    "title": "సహాయం మరియు మద్దతు",
+    "subtitle": "మీకు సహాయం చేయడానికి మేము ఇక్కడ ఉన్నాము",
+    "callUs": "మాకు కాల్ చేయండి",
+    "email": "ఇమెయిల్",
+    "voiceGuidedHelp": "వాయిస్-మార్గనిర్దేశిత సహాయం",
+    "voiceGuidedDesc": "మీ భాషలో తక్షణ సహాయం పొందండి",
+    "start": "ప్రారంభించండి",
+    "faq": "తరచుగా అడిగే ప్రశ్నలు",
+    "liveChatSupport": "లైవ్ చాట్ మద్దతు",
+    "liveChatDesc": "తక్షణ సహాయం కోసం మా మద్దతు టీమ్‌తో చాట్ చేయండి",
+    "startChat": "చాట్ ప్రారంభించండి",
+    "appName": "స్వస్థ్య వాణి",
+    "version": "వెర్షన్ 1.0.0",
+    "trustedCompanion": "మీ నమ్మకమైన ఆరోగ్య సహచరుడు",
+    "faq1Q": "మందులను ఎలా శోధించగలను?",
+    "faq1A": "హోమ్ స్క్రీన్‌లోని శోధన బార్ ఉపయోగించి మందులను శోధించవచ్చు. మీరు పేరును టైప్ చేయవచ్చు, కెమెరా ఉపయోగించి ప్రిస్క్రిప్షన్‌ను స్కాన్ చేయవచ్చు లేదా వాయిస్ ఇన్పుట్ ఉపయోగించవచ్చు.",
+    "faq2Q": "లక్షణ సిఫార్సులు ఖచ్చితమైనవా?",
+    "faq2A": "మా లక్షణ చెకర్ సాధారణ లక్షణాల ఆధారంగా సాధారణ సిఫార్సులను అందిస్తుంది. సరైన నిర్ధారణ మరియు చికిత్సకు ఎల్లప్పుడూ ఆరోగ్య నిపుణునిని సంప్రదించండి.",
+    "faq3Q": "మందు జ్ఞాపకాలను ఎలా సెట్ చేయగలను?",
+    "faq3A": "జ్ఞాపకాలు ట్యాబ్‌కి వెళ్లి 'కొత్త జ్ఞాపకాన్ని జోడించండి' పై ట్యాప్ చేయండి. మోతాదును ఎప్పుడూ మరచిపోకుండా మందు పేరు, సమయం మరియు పౌనఃపున్యాన్ని నమోదు చేయండి.",
+    "faq4Q": "నా ఆరోగ్య డేటా భద్రంగా ఉందా?",
+    "faq4A": "అవును, మీ అన్ని ఆరోగ్య డేటా ఎన్క్రిప్ట్ చేయబడింది మరియు మీ పరికరంలో భద్రంగా నిల్వ చేయబడుతుంది. మేము మీ గోప్యత మరియు భద్రతను ప్రాధాన్యత ఇస్తాము.",
+    "faq5Q": "ఏ భాషలు మద్దతు ఇస్తాయి?",
+    "faq5A": "అనువర్తనం ఇంగ్లీష్, హిందీ, తమిళం, తెలుగు, బెంగాలీ, మరాఠీ, గుజరాతీ మరియు కన్నడ అని మద్దతు ఇస్తుంది. మీ ప్రొఫైల్ సెట్టింగ్‌ల నుండి భాషను మార్చవచ్చు.",
+    "callingSupport": "మద్దతును కాల్ చేస్తోంది...",
+    "openingEmail": "ఇమెయిల్‌ను తెరుస్తోంది...",
+    "voiceHelpComingSoon": "వాయిస్ సహాయం త్వరలో రాబోతోంది!",
+    "chatSupportComingSoon": "చాట్ మద్దతు త్వరలో రాబోతోంది!"
   },
   "languages": {
     "en": "English",
@@ -64,4 +218,3 @@
     "kn": "ಕನ್ನಡ (Kannada)"
   }
 }
-
